New set of .htm and lexicon.txt files for gwsetup

--- a/bin/setup/lang/bso_comm.htm
+++ b/bin/setup/lang/bso_comm.htm
@@ -7,15 +7,7 @@
   <meta name="robots" content="none">
   <link rel="shortcut icon" href="images/favicon_gwsetup.png">
 
-  <title>[
-de: Inhalt der Datei "comm.log"
-en: Content of comm.log
-es: Contenido del fichero "comm.log"
-fi: Tiedoston "comm.log" sisältö
-fr: Contenu du fichier comm.log
-it: Contenuto del file "comm.log"
-sv: Innehållet i filen "comm.log"
-]
+  <title>[Content of comm.log]
 </title>
 %fsetup.css;
 </head>
@@ -24,15 +16,7 @@ sv: Innehållet i filen "comm.log"
 
 <div style="background:url('images/gwlogo.png') no-repeat left top; text-align:center; height:95px; line-height:95px; color:#2f6400;">
 <h1 style="margin:0;">
-[
-de: Inhalt der Datei "comm.log"
-en: Content of comm.log
-es: Contenido del fichero "comm.log"
-fi: Tiedoston "comm.log" sisältö
-fr: Contenu du fichier comm.log
-it: Contenuto del file "comm.log"
-sv: Innehållet i filen "comm.log"
-]
+[Content of comm.log]
 </h1>
 </div>
 
@@ -40,17 +24,7 @@ sv: Innehållet i filen "comm.log"
 
 <dl><dt><dd>
 <pre>
-%g{- [
-de: empty file
-en: empty file
-es: fichero vacio
-fi: tyhjä tiedosto
-fr: fichier vide
-it: file vuoto
-lv: datne ir tukða
-sv: tom fil
-lv: datne ir tukða
-]
+%g{- [empty file]
 -}
 </pre>
 </dl>
