--- a/bin/setup/lang/bso_err.htm
+++ b/bin/setup/lang/bso_err.htm
@@ -22,66 +22,20 @@
 
 <p />
 
-[
-de: Das vorangegangene Kommando hat beim Beenden einen Fehler geliefert.
-    Deine Datenbank wurde möglicherweise nicht angelegt.
-en: The previous command exited with an error code. Your database may have
-    not been created.
-es: El comando anterior ha terminado con un código de error. Es 
-    posible que su base de datos "%o" no haya sido creada.
-fi: Edellinen komento keskeytyi virheeseen. On mahdollista ettei tietokantaa
-    luotu.
-fr: La commande précédente s’est terminée avec un
-    code d’erreur. Il se peut que votre base de données "%o" n’ait
-    pas été créée.
-it: Il precedente comando ha generato un codice di errore.
-    La vostra base "%o" non è forse stata creata.
-lv: Iepriekðçjâ komanda beidza savu darbu ar kïûdas kodu. Iespçjams, ka Jûsu
-    datu bâze nav izviedota.
-sv: Det föregående kommandot avslutades med en felkod. Din databas kanske
-    har skapats.
-]
+[The previous command exited with an error code. Your database may have not been created.]
+%(
+The previous command exited with an error code. Your database may have not been 
+created.
+%)
 
 <p />
 
-[
-de: Du kannst dir seine <a
-    href="gwsetup?lang=%l;v=traces.htm">Trace-Ausgaben</a> ansehen, 
-    vielleicht kannst du die Erklärung für das Problem erkennen.
-en: Look at the <a
-    href="gwsetup?lang=%l;v=traces.htm">traces</a>, maybe you can find an
-    explanation.
-es: Vea Ud en las <a href="gwsetup?lang=%l;v=traces.htm">trazas</A>,
-    pueda ser que allí Ud encuentre una explicación.
-fi: Katso <a
-    href="gwsetup?lang=%l;v=traces.htm">jäljitystä</a>, ehkä löydät selityksen.
-fr: Regardez dans les <a href="gwsetup?lang=%l;v=traces.htm">traces</a>,
-    peut-être y trouverez-vous une explication.
-it: Date un'occhiata nelle <a href="gwsetup?lang=%l;v=traces.htm">tracce</a>,
-    forse vi troverete una spiegazione.
-lv: Skatiet comandas darbîbas <a
-    href="gwsetup?lang=%l;v=traces.htm">pçdas</a>, iespçjams, ka varçsiet
-    atrast izskaidrojumu.
-sv: Titta på <a href="gwsetup?lang=%l;v=traces.htm">utskriften</a>, kanske
-    du kan finna en förklaring.
-]
+[Look at the <a href="gwsetup?lang=%l;v=traces.htm">traces</a>, maybe you can find an explanation.]
+%(
+Look at the <a href="gwsetup?lang=%l;v=traces.htm">traces</a>, maybe you can fin
+d an explanation.
+%)
 
 <p />
 
-[
-de: Zurück zum <a href="gwsetup?lang=%l;v=welcome.htm">Hauptmenü</a>.
-en: Or you can return to the
-    <a href="gwsetup?lang=%l;v=welcome.htm">main menu</a>.
-es: O Ud. puede regresar al <a href="gwsetup?lang=%l;v=welcome.htm">menú
-    principal</a>.
-fi: Tai voit palata
-    <a href="gwsetup?lang=%l;v=welcome.htm">päävalikkoon</a>.
-fr: Ou vous pouvez revenir au <a href="gwsetup?lang=%l;v=welcome.htm">menu
-    principal</a>.
-it: Oppure potete tornare al <a href="gwsetup?lang=%l;v=welcome.htm">menu
-    principale</a>.
-lv: Vai arî atgriezieties <a href="gwsetup?lang=%l;v=welcome.htm">galvenajâ
-    izvçlnç</a>.
-sv: Eller du kan återvända till
-    <a href="gwsetup?lang=%l;v=welcome.htm">huvudmenyn</a>.
-]
+[Or you can return to the <a href="gwsetup?lang=%l;v=welcome.htm">main menu</a>.]
