--- a/bin/setup/lang/cleanup.htm
+++ b/bin/setup/lang/cleanup.htm
@@ -7,16 +7,7 @@
   <meta name="robots" content="none">
   <link rel="shortcut icon" href="images/favicon_gwsetup.png">
 
-  <title>[
-de: Aufräumen
-en: Clean up
-es: Limpieza
-fi: Puhdista
-fr: Nettoyage
-it: Pulizia
-lv: Sakopðana
-sv: Upprensning
-]
+  <title>[Clean up]
 </title>
 %fsetup.css;
 </head>
@@ -25,100 +16,33 @@ sv: Upprensning
 
 <div style="background:url('images/gwlogo.png') no-repeat left top; text-align:center; height:95px; line-height:95px; color:#2f6400;">
 <h1 style="margin:0;">
-[
-de: Eine Datenbank aufräumen
-en: Cleaning up a database
-es: Limpieza de una base de datos
-fi: Tietokannan puhdistus
-fr: Nettoyage d’une base de données
-it: Pulizia di una base di dati
-lv: Datu bâzes sakopðana
-sv: Upprensning av en databas
-]
+[Cleaning up a database]
 </h1>
 </div>
 
-[
-de: Wenn du viele Änderungen an deiner Datenbank vorgenommen hast, oder
-    einfach nur viele Daten eingegeben hast, dann ist es empfehlenswert, sie
-    aufzuräumen, insbesondere falls du feststellst, daß sich der
-    Zugriff auf deine Datenbank verlangsamt hat.
-en: If you made many modifications in your database, or if you simply entered
-    much data, it is advised to make a cleaning up, especially if you observe
-    that the access to your database has slowed down.
-es: Si Ud ha efectuado muchas modificaciones en su base de datos, o
-    simplemente si Ud. a entrado muchos datos, es aconsejable de realizar 
-    una limpieza, en particular si Ud constata que el acceso a su base de 
-    datos comienza a ser mas lento que de costumbre.
-fi: Jos olet tehnyt muutoksia tietokantaan, tai olet syöttänyt paljon tietoa
-    on suositeltavaa että puhdistat sen, varsinkin jos huomaat että
-    tietokannan käyttö on hidastunut.
-fr: Si vous avez fait beaucoup de modifications dans votre base de
-    données, ou si vous avez simplement entré beaucoup de
-    données, il est conseillé de faire un nettoyage, surtout
-    si vous constatez que l’accès à votre base de
-    données commence à ralentir.
-it: Se avete fatto molte modifiche alla vostra base di dati o se avete
-    semplicemente aggiunto molti dati, vi consigliamo di realizzare una
-    "pulizia", soprattutto se constatate un rallentamento nella consultazione
-    della base.
-lv: Ja Jûs esat izdarîjuði daudz labojumus datu bazç, vai vienkârði pamatîgi
-    papildinâjuði datu bâzi, tad ieteicams veikt datu bâzes sakopðanu, it
-    seviðíi, ja Jûs esat ievçrojuði, ka datu bâzes darbîba kïuvusi lçnâka.
-sv: Om du har gjort många modifieringar i din databas, eller om du helt
-    enkelt har skrivit in mycket data, är det rekommenderat att du gör en
-    upprensning, speciellt om du ser att åtkomsten till din databas
-    går saktare.
-]
+[If you made many modifications in your database, or if you simply entered much data, it is advised to make a cleaning up, especially if you observe that the access to your database has slowed down.]
+%(
+If you made many modifications in your database, or if you simply entered much d
+ata, it is advised to make a cleaning up, especially if you observe that the acc
+ess to your database has slowed down.
+%)
 <p>
 <ul><li>
-[
-de: Um einfach aufzuräumen, wende die 
-    <a href="gwsetup?lang=%l;v=consang.htm">Initialisierung der
-    Blutsverwandtschaft</a> an.
-en: For a simple cleaning up, apply the <a
-    href="gwsetup?lang=%l;v=consang.htm">initialisation</a> of
-    consanguinities.
-es: Para realizar una limpieza simple, aplique el <a
-    href="gwsetup?lang=%l;v=consang.htm">programa de
-    inicialisación</a> de las consanguinidades.
-fi: Esimerkiksi puhdistaminen, sukulaisuuden<a
-    href="gwsetup?lang=%l;v=consang.htm">käyttöönotto</a>.
-fr: Pour un nettoyage simple, appliquez le <a
-    href="gwsetup?lang=%l;v=consang.htm">programme d’initialisation</a> des
-    consanguinités.
-it: Per una pulizia semplice, applicate il <a
-    href="gwsetup?lang=%l;v=consang.htm">programma d'inizializzazione</a> delle
-    consanguineità.
-lv: Vienkârðai datu bâzes sakopðanai vieciet asinsradniecîbas <a
-    href="gwsetup?lang=%l;v=consang.htm">pârrçíinâðanu</a>.
-sv: För en enkel upprensning, använd <a
-    href="gwsetup?lang=%l;v=consang.htm">beräkning</a> av
-    blodsband.
-]
+[For a simple cleaning up, apply the <a href="gwsetup?lang=%l;v=consang.htm">initialisation</a> of consanguinities.]
+%(
+For a simple cleaning up, apply the <a href="gwsetup?lang=%l;v=consang.htm">init
+ialisation</a> of consanguinities.
+%)
 <p >
 <li>
 <form method="get" action="cleanup">
 <input type="hidden" name="lang" value="%l" />
 
-[
-de: Um radikal aufzuräumen, wähle deine Datenbank aus, indem du 
-    den zugehörigen Schalter anklickst:
-en: For a radical cleaning up, select your database by clicking on the
-    associated button:
-es: Para realizar una limplieza minuciosa, seleccione su base de datos
-    cliqueando en el botón asociado:
-fi: Suorittaaksesi ison puhdistuksen, valitse tietokantasi painamalla
-    nappia alta:
-fr: Pour un nettoyage en profondeur, sélectionnez votre base de
-    données en cliquant sur le bouton associé:
-it: Per una pulizia profonda, selezionate la vostra base di dati
-    cliccando sul bottone che le è associato.
-lv: Pamatîgâkai datu bâzes pârrçíinâðanai izvçlieties savu datu bâzi
-    uzklikðíinot uz atbilstoðâs râdio podziòas:
-sv: För en radikal upprensning, välj din databas genom att klicka på
-    motsvarande knapp:
-]
+[For a radical cleaning up, select your database by clicking on the associated button:]
+%(
+For a radical cleaning up, select your database by clicking on the associated bu
+tton:
+%)
 <p>
 <table class="setup">
 %b{
@@ -126,41 +50,14 @@ sv: För en radikal upprensning, välj din databas genom att klicka på
 <td><input type="radio" name="anon" value="%a" />   </td>
 <td><a href="http://%m:%P/%a">%a</a></td>
 </tr>|
-<tr align="left"><td>- [
-de: keine Datenbank vorhanden
-en: there is no database at present
-es: actualmente ninguna base de datos existe
-fi: ei tietokantaa saatavilla
-fr: il n’y a aucune base de données actuellement
-it: attualmente non esiste nessuna base di dati
-lv: patreiz nav nekâdu datu
-sv: det finns ingen databas för tillfället
-]
+<tr align="left"><td>- [there is no database at present]
 </tr></td>}
 </table>
 <p>
 <li>
-[
-de: Dann drücke diesen Knopf:
-en: Then push this button:
-es: Y a continuación apoye en el botón siguiente:
-fi: Sitten paina tätä nappia:
-fr: Puis appuyez sur ce bouton :
-it: E poi cliccate su questo bottone:
-lv: Pçc tam nospiediet ðo podziòu:
-sv: Tryck sedan på denna knapp:
-]
+[Then push this button:]
 <p>
-<input type="submit" value="[
-de: Aufräumen
-en: Cleanup
-es: Limpieza
-fi: Puhdistus
-fr: Nettoyage
-it: Pulizia
-lv: Sakopt
-sv: Rensa upp
-]
+<input type="submit" value="[Cleanup]
 " />
 
 </form>
