--- a/bin/setup/lang/del_ok.htm
+++ b/bin/setup/lang/del_ok.htm
@@ -7,16 +7,7 @@
   <meta name="robots" content="none">
   <link rel="shortcut icon" href="images/favicon_gwsetup.png">
 
-  <title>[
-de: Databanken gelöscht
-en: Databases deleted
-es: Bases destruidas
-fi: Tietokannat tuhottu
-fr: Bases détruites
-it: Basi soppresse
-lv: Datubâzes izdzçstas
-sv: Databaser raderade
-]
+  <title>[Databases deleted]
 </title>
 %fsetup.css;
 </head>
@@ -25,92 +16,37 @@ sv: Databaser raderade
 
 <div style="background:url('images/gwlogo.png') no-repeat left top; text-align:center; height:95px; line-height:95px; color:#2f6400;">
 <h1 style="margin:0;">
-[
-de: Databanken gelöscht
-en: Databases deleted
-es: Bases destruidas
-fi: Tietokannat tuhottu
-fr: Bases détruites
-it: Basi soppresse
-lv: Datubâzes izdzçstas
-sv: Databaser raderade
-]
+[Databases deleted]
 </h1>
 </div>
 
 <p />
 
-[
-de: Dies sind die gelöschten Datenbanken:
-en: Here are the deleted databases:
-es: Eh aquí las bases que han sido destruidas:
-fi: Tässä on tuhotut tietokannat:
-fr: Voici les bases qui ont été détruites :
-it: Ecco le basi che sono state soppresse:
-lv: Sekojoðas datu bâzes ir izdzçstas:
-sv: Här är de raderade databaserna:
-]
+[Here are the deleted databases:]
 
 <p />
 
 <ul>
 
-%k{<li>%a|<li>- [
-de: no selection
-en: no selection
-es: ninguna selección
-fi: ei valintaa
-fr: pas de sélection
-it: nessuna selezione
-lv: nav iezîmçtas
-sv: inga val
-]
+%k{<li>%a|<li>- [no selection]
 -}
 
 </ul>
 
 <p />
 
-[
-de: Dies sind die verbleibenden Datenbanken:
-en: Here are the remaining databases:
-es: Eh aquí las bases que quedan:
-fi: Tässä on jäljellä olevat tietokannat:
-fr: Voici les bases qui restent :
-it: Ecco le basi che restano:
-lv: Sekojoðas datu bâzes ir palikuðas:
-sv: Här är de återstående databaserna:
-]
+[Here are the remaining databases:]
 
 <p />
 
 <ul>
 
 %b{<li><a href="http://%m:%P/%a">%a</a>|
-<li> [
-de: keine Datenbank vorhanden
-en: there is no database
-es: no queda ninguna base de datos
-fi: tietokantaa ei ole olemassa
-fr: il n’y a aucune base de données
-it: non rimane nessuna base di dati
-lv: nav nevienas datu bâzes
-sv: det finns ingen databas
-]
+<li> [there is no database]
 }
 
 </ul>
 
 <p />
 
-[
-de: Zurück zum <a href="gwsetup?lang=%l;v=welcome.htm">Hauptmenü</a>.
-en: Return to the <a href="gwsetup?lang=%l;v=welcome.htm">main menu</a>.
-es: Regrese Ud al <a href="gwsetup?lang=%l;v=welcome.htm">menú
-    principal</a>.
-fi: Palaa <a href="gwsetup?lang=%l;v=welcome.htm">päävalikkoon</a>.
-fr: Revenez au <a href="gwsetup?lang=%l;v=welcome.htm">menu principal</a>.
-it: Tornate al <a href="gwsetup?lang=%l;v=welcome.htm">menu principale</a>.
-lv: Atgriezies galvenajâ <a href="gwsetup?lang=%l;v=welcome.htm">izvçlnç</a>.
-sv: Återvänd till <a href="gwsetup?lang=%l;v=welcome.htm">huvudmenyn</a>.
-]
+[Return to the <a href="gwsetup?lang=%l;v=welcome.htm">main menu</a>.]
