--- a/bin/setup/lang/delete_1.htm
+++ b/bin/setup/lang/delete_1.htm
@@ -7,16 +7,7 @@
   <meta name="robots" content="none">
   <link rel="shortcut icon" href="images/favicon_gwsetup.png">
 
-  <title>[
-de: Datenbanken löschen
-en: Deletion of databases
-es: Supresión de bases de datos
-fi: Tietokantojen poistaminen
-fr: Suppression de bases données
-it: Cancellazione di basi di dati
-lv: Datu bâþu dzçðana
-sv: Radering av databaser
-]
+  <title>[Deletion of databases]
 </title>
 %fsetup.css;
 </head>
@@ -25,16 +16,7 @@ sv: Radering av databaser
 
 <div style="background:url('images/gwlogo.png') no-repeat left top; text-align:center; height:95px; line-height:95px; color:#2f6400;">
 <h1 style="margin:0;">
-[
-de: Datenbanken löschen
-en: Deletion of databases
-es: Supresión de bases de datos
-fi: Tietokantojen poistaminen
-fr: Suppression de bases  de données
-it: Cancellazione di basi di dati
-lv: Datu bâþu dzçðana
-sv: Radering av databaser
-]
+[Deletion of databases]
 </h1>
 </div>
 
@@ -44,80 +26,27 @@ sv: Radering av databaser
 <input type="hidden" name="lang" value="%l" />
 %k{<input type="hidden" name="%a" value="del" />|}
 
-[
-de: Bist du sicher, daß du diese Datenbanken löschen möchtest?
-en: Are you sure you want to delete these databases?
-es: Esta Ud seguro de querer suprimir estas bases?
-fi: Oletko varma että haluat poistaa nämä tietokannat?
-fr: Êtes-vous sûr de vouloir supprimer ces bases?
-it: Siete sicuri di voler cancellare queste basi ?
-lv: Vai Jûs patieðâm vçlaties dzçst sekojoðas datu bâzes?
-sv: Är du säker att du vill radera dessa databaser?
-]
+[Are you sure you want to delete these databases?]
 
 <p />
 
 <ul>
 
 %k{<li><a href="http://%m:%P/%a">%a</a>|
-<li>- [
-de: no selection
-en: no selection
-es: ninguna selección
-fi: ei valintaa
-fr: pas de sélection
-it: nessuna selezione
-lv: nav iezîmçtas
-sv: inga val
-]
+<li>- [no selection]
 -}
 
 </ul>
 
 <p />
 
-[
-de: Achtung: Diese Auswahl ist unwiderruflich! Zur Bestätigung bitte
-    diesen Kopf drücken:
-en: Warning: this suppression is definitive! To confirm, push this button.
-es: ¡Atención, esta supresión es definitiva ! Para confirmar,
-    apoye Ud en este botón: 
-fi: Varoitus: tämä poisto on lopullinen! Paina tätä nappia vahvistaaksesi.
-fr: Attention, cette suppression est définitive! Pour confirmer,
-    appuyez sur ce bouton:
-it: Attenzione, questa azione è definitiva! Per confermare,
-    cliccate su questo bottone:
-lv: Uzmanîbu: ðis brîdinâjums ir pçdçjais! Lai to apstiprinâtu, nospiediet
-    ðo podziòu.
-sv: Varning: detta val är definitivt! För att bekräfta, tryck på denna knapp.
-]
+[Warning: this suppression is definitive! To confirm, push this button.]
 
 <p />
 
-<dl><dt><dd><input type="submit" value="[
-de: Löschen
-en: Delete
-es: Destruir
-fi: Poista
-fr: Détruire
-it: Cancellare
-lv: Izmest
-sv: Radera
-]
+<dl><dt><dd><input type="submit" value="[Delete]
 " /></dl>
 
 <p />
 
-[
-de: Zurück zum <a href="gwsetup?lang=%l;v=welcome.htm">Hauptmenü</a>.
-en: Or return to the <a href="gwsetup?lang=%l;v=welcome.htm">main menu</a>.
-es: O, regrese Ud. al <a href="gwsetup?lang=%l;v=welcome.htm">menú
-    principal</a>.
-fi: tai palaa <a href="gwsetup?lang=%l;v=welcome.htm">päävalikkoon</a>.
-fr: Ou revenez au <a href="gwsetup?lang=%l;v=welcome.htm">menu
-    principal</a>.
-it: O tornate al <a href="gwsetup?lang=%l;v=welcome.htm">menu
-    principale</a>.
-lv: Vai arî atgriezieties <a href="gwsetup?lang=%l;v=welcome.htm">galvenajâ izvçlnç</a>.
-sv: Eller återvänd till <a href="gwsetup?lang=%l;v=welcome.htm">huvudmenyn</a>.
-]
+[Or return to the <a href="gwsetup?lang=%l;v=welcome.htm">main menu</a>.]
