--- a/bin/setup/lang/err_cnfl.htm
+++ b/bin/setup/lang/err_cnfl.htm
@@ -20,26 +20,8 @@
 </div>
 
 
-[
-de: Der Name "%o" wird mehrfach benutzt.
-en: The name "%o" is used several times.
-es: El nombre "%o" es utilisado varias veces.
-fi: Nimi "%o" on käytetty useaan otteeseen.
-fr: Le nom "%o" est utilisé plusieurs fois.
-it: Il nome "%o" è utilizzato più volte.
-lv: Vârds "%o" jau eksistç.
-sv: Namnet "%o" är använt flera gånger.
-]
+[The name "%o" is used several times.]
 
 <p />
 
-[
-de: Bitte kehre auf die vorherige Seite zurück und korrigiere den Fehler.
-en: Return to the previous page and correct.
-es: Regrese a la página anterior y corrija el error. 
-fi: Palaa edelliselle sivulle ja korjaa.
-fr: Revenez à la page précédente et corrigez.
-it: Tornate alla pagina precedente e correggete.
-lv: Atgriezieties iepriekðçjâ lapâ un izlabojiet.
-sv: Återvänd till den föregående sidan och rätta till.
-]
+[Return to the previous page and correct.]
