--- a/bin/setup/lang/err_miss.htm
+++ b/bin/setup/lang/err_miss.htm
@@ -7,16 +7,7 @@
   <meta name="robots" content="none">
   <link rel="shortcut icon" href="images/favicon_gwsetup.png">
 
-  <title>[
-de: Fehlender Name
-en: Missing name
-es: Nombre faltante
-fi: Nimi puuttuu
-fr: Nom manquant
-it: Nome mancante
-lv: Trûkst nosaukuma
-sv: Det fattas namn
-]
+  <title>[Missing name]
 </title>
 %fsetup.css;
 </head>
@@ -25,46 +16,13 @@ sv: Det fattas namn
 
 <div style="background:url('images/gwlogo.png') no-repeat left top; text-align:center; height:95px; line-height:95px; color:#2f6400;">
 <h1 style="margin:0;">
-<font color="red">[
-de: Fehlender Name
-en: Missing name
-es: Nombre faltante
-fi: Nimi puuttuu
-fr: Nom manquant
-it: Nome mancante
-lv: Trûkst nosaukuma
-sv: Det fattas namn
-]
+<font color="red">[Missing name]
 </font>
 </h1>
 </div>
 
-[
-de: Dein Kommando kann nicht ausgeführt werden. Du hast nicht
-    genügend Informationen angegeben.
-en: It is not possible to execute your command. You did not give enough
-    information.
-es: La ejecución de su comando no es posible. Ud. no ha dado todas
-    las informaciones necesarias.
-fi: Antamaasi komentoa ei ole mahdollista ajaa. Et antanut tarpeeksi tietoja.
-fr: Il n’est pas possible d’exécuter votre commande. Vous n’avez pas
-    donné assez d’informations.
-it: Non è possibile eseguire il vostro comando. Non avete
-    fornito informazioni sufficienti.
-lv: Nevar izpildît Jûsu doto komadu. Jûs nedevât pietiekamu informâciju.
-sv: Det är inte möjligt att utföra ditt kommando. Du angav inte tillräckligt
-    med information.
-]
+[It is not possible to execute your command. You did not give enough information.]
 
 <p />
 
-[
-de: Gehe zurück auf die <a href="%n">vorherige Seite</a>.
-en: Go back to the <a href="%n">previous page</a>.
-es: Regrese Ud. a la <a href="%n">página anterior</a>.
-fi: Mene takaisin <a href="%n">edelliselle sivulle</a>.
-fr: Revenez à la <a href="%n">page précédente</a>.
-it: Tornate alla <a href="%n">pagina precedente</a>.
-lv: Argriezieties <a href="%n">iepriekðçjâ lapâ</a>.
-sv: Gå tillbaka till <a href="%n">föregående sida</a>.
-]
+[Go back to the <a href="%n">previous page</a>.]
