--- a/bin/setup/lang/err_name.htm
+++ b/bin/setup/lang/err_name.htm
@@ -7,16 +7,7 @@
   <meta name="robots" content="none">
   <link rel="shortcut icon" href="images/favicon_gwsetup.png">
 
-  <title>[
-de: Falscher Name
-en: Incorrect name
-es: Nombre incorrecto
-fi: Virheellinen nimi
-fr: Nom incorrect
-it: Nome non conforme
-lv: Nederîgs nosaukums
-sv: Felaktigt namn
-]
+  <title>[Incorrect name]
 </title>
 %fsetup.css;
 </head>
@@ -25,65 +16,17 @@ sv: Felaktigt namn
 
 <div style="background:url('images/gwlogo.png') no-repeat left top; text-align:center; height:95px; line-height:95px; color:#2f6400;">
 <h1 style="margin:0;">
-<font color="red">[
-de: Falscher Name
-en: Incorrect name
-es: Nombre incorrecto
-fi: Virheellinen nimi
-fr: Nom incorrect
-it: Nome non conforme
-lv: Nederîgs nosaukums
-sv: Felaktigt namn
-]
+<font color="red">[Incorrect name]
 </font></h1>
 </div>
 
-[
-de: Du kannst "%o" nicht als Datenbanknamen verwenden, da unerlaubte
-    Zeichen enthalten sind.
-en: You cannot choose "%o" as database name, because it holds forbidden
-    characters.
-es: Ud. no puede escoger "%o" como un nombre para su base de datos debido
-    a que él contiene uno o varios carácteres prohibidos.
-fi: Et voi valita tietokannan nimeksi "%o" koska se sisältää kiellettyjä
-    merkkejä.
-fr: Vous ne pouvez pas choisir "%o" comme nom de base de données car
-    il contient des caractères interdits.
-it: Non potete scegliere "%o" come nome della vostra base perché
-    contiene dei caratteri vietati.
-lv: Jûs nevarat nosaukt datu bâzi ðâdi - "%o", jo nosaukums satur
-    aizliegtâs (rezervçtâs) zîmes.
-sv: Du kan inte välja "%o" som din databas namn, därför namnet innhåller
-    förbjudna tecken.
-]
+[You cannot choose "%o" as database name, because it holds forbidden characters.]
 
 <p />
 
-[
-de: Der Name einer Datenbank kann nur aus einfachen Buchstaben (klein oder
-    groß, keine Sonderzeichen oder Umlaute), Ziffern und dem Zeichen "-" 
-    bestehen. Alle anderen Zeichen (insbesondere das Leerzeichen) sind
-    verboten.
-en: The name of a database is made of non accentuated letters (uppercase
-    or lowercase), digits and of the character "-". Other characters
-    (particularly space) are forbidden.
-es: El nombre de una base de datos debe estar constituida de letras,
-    (mayúsculas o minúsculas) sin ningún tipo de acento,
-    de cifras y del carácter "-". Todos los otros carácteres
-    (en particular el "espacio") son prohibidos.
-fi: Tietokannan nimen pitää koostua ei aksenttisista kirjaimista,
-    numeroista tai "-" merkistä. Muut merkit (kuten välilyönti) on kielletty.
-fr: Le nom d’une base de données est constitué de lettres
-    non accentuées (majuscules ou minuscules), de chiffres et du
-    caractère « - ». Tout autre caractère (en particulier
-    l’espace) est interdit.
-it: Il nome di una base di dati è costituito da lettere non accentuate
-    (maiuscole o minuscole), di cifre e dal carattere "-". Tutti gli altri
-    caratteri sono proibiti.
-lv: Datu bâzes nosaukums drîkst saturçt tikai burtus bez garumzîmçm un
-    mîkstinâjumiem (lielos vai mazos), skaitïus un zîmi "-". Citas rakstu
-    zîmes (ieskaitot atstarpi) ir aizliegtas.
-sv: Namnet för databasen kan bestå av  bokstäver (versaler eller
-    gemena), siffror och tecknet "-". Andra tecken (speciellt mellanslag)
-    är förbjudna.
-]
+[The name of a database is made of non accentuated letters (uppercase or lowercase), digits and of the character "-". Other characters (particularly space) are forbidden.]
+%(
+The name of a database is made of non accentuated letters (uppercase or lowercas
+e), digits and of the character "-". Other characters (particularly space) are f
+orbidden.
+%)
