--- a/bin/setup/lang/err_ndir.htm
+++ b/bin/setup/lang/err_ndir.htm
@@ -19,16 +19,7 @@
 </font></h1>
 </div>
 
-[
-de: Es gibt kein Verzeichnis mit diesem Namen:
-en: There is no directory with this name:
-es: No existe ninguna carpeta con el nombre:
-fi: Hakemistoa tällä nimellä ei ole:
-fr: Il n’y a pas de répertoire portant ce nom :
-it: Non esiste una directory con questo nome:
-lv: Katalogs ar ðâdu nosaukumu neeksistç:
-sv: Det finns ingen katalog med det namnet:
-]
+[There is no directory with this name:]
 
 <p />
 
@@ -38,16 +29,4 @@ sv: Det finns ingen katalog med det namnet:
 
 <p />
 
-[
-de: Bitte kehre zurück auf die vorherige Seite und gib einen
-    korrekten Verzeichnisnamen ein.
-en: Return to the previous screen and write the good directory.
-es: Regrese Ud. a la pantalla anterior e indique la carpeta correcta.
-fi: Palaa edelliselle sivulle ja kirjoita oikea hakemisto.
-fr: Revenez à l’écran précédent et indiquez
-    le bon répertoire.
-it: Tornate alla videata precedente ed indicate
-    la directory corretta.
-lv: Atgriezieties iepriekðçjâ lapâ un ierakstiet pareizo kataloga nosakumu.
-sv: Återvänd till föregående sida och skriv in den rätta katalogen.
-]
+[Return to the previous screen and write the good directory.]
