--- a/bin/setup/lang/err_ngw.htm
+++ b/bin/setup/lang/err_ngw.htm
@@ -20,16 +20,7 @@
 </font></h1>
 </div>
 
-[
-de: Du hast folgendes Verzeichnis ausgewählt:
-en: You selected the directory:
-es: Ud ha seleccionado la carpeta:
-fi: Valitsit hakemiston:
-fr: Vous avez sélectionné le répertoire :
-it: Avete selezionato la directory:
-lv: Jûs izvçlçjaties katalogu:
-sv: Du valde katalogen:
-]
+[You selected the directory:]
 
 <p />
 
@@ -37,83 +28,21 @@ sv: Du valde katalogen:
      %a
 </pre>
 
-[
-de: Dieses Verzeichnis enthält aber nicht das Kommando "gwu", welches
-    nötig ist, um die Datenbank zu übertragen. Bist Du sicher,
-    daß dieses Verzeichnis ein <font
-    color=#2f6400><b>GeneWeb</b></font>-Installationsverzeichnis ist
-en: But it does not hold the command "gwu" required to transfer your
-    database. Are you sure it is a <font color=#2f6400><b>GeneWeb</b></font>
-    distribution directory
-es: Pero ella no contiene el comando "gwu" necesario para transferir su base
-    de datos. ¿está Ud. seguro de que se trata bien de una
-    carpeta de una distribución <font
-    color=#2f6400><b>GeneWeb</b></font>
-fi: Mutta se ei sisällä komentoa "gwu" joka vaaditaan että voit siirtää
-    tietokannan. Oletko varma että se on 
-    <font color=#2f6400><b>GeneWeb</b></font> asennus hakemisto 
-fr: Mais celui-ci ne contient pas la commande "gwu" nécessaire au
-    transfert de votre base de données. Êtes-vous sûr
-    qu’il s’agit bien d’un répertoire d’une distribution <b><font
-    color=#2f6400>GeneWeb</font></b>
-it: Ma questa non contiene il comando "gwu" necessario al
-    trasferimento della vostra base di dati. Siete sicuri che si tratti
-    della directory contenente una distribuzione <b><font
-    color=#2f6400>GeneWeb</font></b>
-lv: Bet tas nesatur komandu "gwu", kas nepiecieðama, lai pâvietotu
-    (transfer) Jûsu datu bâzi. Vai Jûs esat pârliecinâts, ka tas ir  <font
-    color=#2f6400><b>GeneWeb</b></font> izplatîðanas katlogs
-sv: Men den innehåller inte kommandot "gwu" nödvändig fär att överföra din
-    databas. Är du säker på att det är en <font
-    color=#2f6400><b>GeneWeb</b></font> distributions katalog
-]?
+[But it does not hold the command "gwu" required to transfer your database. Are you sure it is a <font color=#2f6400><b>GeneWeb</b></font> distribution directory]
+%(
+But it does not hold the command "gwu" required to transfer your database. Are y
+ou sure it is a <font color=#2f6400><b>GeneWeb</b></font> distribution directory
+%)
 
 <p />
 
-[
-de: Möglicherweise handelt es sich auch um eine sehr alte Version von
-    <font color=#2f6400><b>GeneWeb</b></font>, in der das Kommando "gwu"
-    noch "gwb2gw" hieß. Wenn dies der Fall ist, benenne die Datei
-    "gwb2gw" in diesem Verzeichnis um in "gwu" und versuche es erneut.
-en: Or else, it may be a very old version of <font
-    color=#2f6400><b>GeneWeb</b></font> where the command "gwu" was called
-    "gwb2gw". If it is the case, rename the file "gwb2gw" into "gwu" in this
-    directory and try again.
-es: Si tal es el caso, pueda ser que se trate de una versión muy
-    antigüa de <font color=#2f6400><b>GeneWeb</b></font> en la cual el
-    comando "gwu" se llamaba "gwb2gw". Si es así, cambie el nombre
-    del fichero "gwb2gw" por "gwu" en esa carpeta, he intente nuevamente.
-fi: Tai muuten, se voi olla erittäin vanha versio<font
-    color=#2f6400><b>GeneWeb</b></font> missä komentoa "gwu" kutsuttiin
-    "gwb2gw" komennoksi". Jos asia on näin, uudelleen nimeä tiedosto "gwb2gw"
-    tiedostoksi tässä hakemistossa ja kokeile uudestaan.
-fr: Il se peut également qu’il s’agisse d’une très ancienne version
-    de <b><font color=#2f6400>GeneWeb</font></b> dans laquelle la commande
-    "gwu" s’appelait "gwb2gw". Si c’est le cas, renommez le fichier "gwb2gw"
-    en "gwu" dans ce répertoire et réessayez.
-it: Può anche darsi che si tratti di una vecchia versione di
-    <b><font color=#2f6400>GeneWeb</font></b>  in cui il comando "gwu"
-    si chiamava "gwb2gw". Se è il caso, cambiate il nome di "gwb2gw"
-    in "gwu".
-lv: Vai arî var bût, ka târ ir kâda ïoti veca <font
-    color=#2f6400><b>GeneWeb</b></font> versija, kurâ komanda "gwu" saucâs
-    "gwb2gw". Tâdâ gadîjumâ, nomainiet datnes "gwb2gw" nosaukumu par "gwu"
-    un mçìiniet vçlreiz.
-sv: Eller annars, kan det vara en väldigt gammal version av <font
-    color=#2f6400><b>GeneWeb</b></font> där kommandot "gwu" kallades
-    "gwb2gw". Om så är fallet, döp om filen "gwb2gw" till "gwu" i denna
-    katalog och försök igen.
-]
+[Or else, it may be a very old version of <font color=#2f6400><b>GeneWeb</b></font> where the command "gwu" was called "gwb2gw". If it is the case, rename the file "gwb2gw" into "gwu" in this directory and try again.]
+%(
+Or else, it may be a very old version of <font color=#2f6400><b>GeneWeb</b></fon
+t> where the command "gwu" was called "gwb2gw". If it is the case, rename the fi
+le "gwb2gw" into "gwu" in this directory and try again.
+%)
 
 <p />
 
-[
-de: Kehre zur vorherigen Seite zurück.
-en: Return to the previous screen.
-es: Regrese Ud. a la pantalla anterior.
-fi: Palaa edelliselle sivulle.
-fr: Revenez à l’écran précédent.
-it: Tornate alla videata precedente.
-lv: Atgriezties iepriekðçjâ lapâ.
-sv: Återvänd till föregående sida.
-]
+[Return to the previous screen.]
