--- a/bin/setup/lang/err_unkn.htm
+++ b/bin/setup/lang/err_unkn.htm
@@ -7,16 +7,7 @@
   <meta name="robots" content="none">
   <link rel="shortcut icon" href="images/favicon_gwsetup.png">
 
-  <title>[
-de: Unbekannte Datei
-en: Unknown file
-es: Fichero desconocido
-fi: Tuntematon tiedosto
-fr: Fichier inconnu
-it: File sconosciuto
-lv: Nepazîstama datne
-sv: Okänd fil
-]
+  <title>[Unknown file]
 </title>
 %fsetup.css;
 </head>
@@ -25,31 +16,13 @@ sv: Okänd fil
 
 <div style="background:url('images/gwlogo.png') no-repeat left top; text-align:center; height:95px; line-height:95px; color:#2f6400;">
 <h1 style="margin:0;">
-<font color="red">[
-de: Unbekannte Datei
-en: Unknown file
-es: Fichero desconocido
-fi: Tuntematon tiedosto
-fr: Fichier inconnu
-it: File sconosciuto
-lv: Nepazîstama datne
-sv: Okänd fil
-]
+<font color="red">[Unknown file]
 </font></h1>
 </div>
 
 <br /><p />
 
-[
-de: Sorry, aber diese Datei ist nicht bekannt:
-en: Sorry, this file is unknown:
-es: Lamentablemente este fichero es desconocido:
-fi: Pahoittelen, tiedostotyyppi on tuntematon:
-fr: Désolé. Ce fichier est inconnu :
-it: Spiacente, questo file è sconosciuto:
-lv: Atvanojiet ðî datne nav pazîstama:
-sv: Denna fil är okänd:
-]
+[Sorry, this file is unknown:]
 
 <p />
 
@@ -59,14 +32,4 @@ sv: Denna fil är okänd:
 
 <p />
 
-[
-de: Kehre zurück auf die vorherige Seite und wähle 
-    eine richtige Datei aus.
-en: Return to the previous page and select the correct file.
-es: Regrece Ud a la página anterior y seleccione el fichero correcto.
-fi: Palaa edelliselle sivulle ja valitse oikea tiedosto.
-fr: Revenez en arrière et sélectionnez le bon fichier.
-it: Tornate indietro e selezionate il buon file.
-lv: Atgriezieties iepriekðçjâ lapâ un izvçlieties pareizu datni.
-sv: Återvänd till föregående sida och välj den rätta filen.
-]
+[Return to the previous page and select the correct file.]
