--- a/bin/setup/lang/gw2gd_ok.htm
+++ b/bin/setup/lang/gw2gd_ok.htm
@@ -7,16 +7,7 @@
   <meta name="robots" content="none">
   <link rel="shortcut icon" href="images/favicon_gwsetup.png">
 
-  <title>[
-de: Operation durchgeführt
-en: Operation completed
-es: Operación terminada
-fi: Toiminto suoritettu
-fr: Opération terminée
-it: Operazione terminata
-lv: Darbîba pabeigta
-sv: Operationen klar
-]
+  <title>[Operation completed]
 </title>
 %fsetup.css;
 </head>
@@ -25,68 +16,21 @@ sv: Operationen klar
 
 <div style="background:url('images/gwlogo.png') no-repeat left top; text-align:center; height:95px; line-height:95px; color:#2f6400;">
 <h1 style="margin:0;">
-[
-de: Operation durchgeführt
-en: Operation completed
-es: Operación terminada
-fi: Toiminto suoritettu
-fr: Opération terminée
-it: Operazione terminata
-lv: Darbîba pabeigta
-sv: Operationen klar
-]
+[Operation completed]
 </h1>
 </div>
 
-[
-de: Die Extraktion der GEDCOM-Datei ist beendet.
-en: The extraction of the GEDCOM file is terminated.
-es: Bién. La extracción del fichero GEDCOM ha terminado.
-fi: GEDCOM-tiedoston vienti on lopetettu.
-fr: Voilà. L’extraction du fichier GEDCOM est terminée.
-it: L'estrazione del file GEDCOM è terminata.
-lv: GEDCOM datnes apstrâde ir pabeigta.
-sv: Exporten av GEDCOM-filen är avslutad.
-]
+[The extraction of the GEDCOM file is terminated.]
 
 <p />
 
-[
-de: Es wurde eine Datei namens "%o" erzeugt.
-en: This has built a file named "%o".
-es: Esta operación ha creado un fichero que tiene por nombre "%o".
-fi: Tämä on luonut tiedoston nimeltä "%o".
-fr: Cela a construit un fichier de nom "%o".
-it: Questa operazione ha creato un file chiamato "%o".
-lv: Rezultâtâ ir izviedota datne: "%o".
-sv: Det har skapats en fil benämnd "%o".
-]
+[This has built a file named "%o".]
 
 <p />
 
-[
-de: Diese Datei steht ihm Verzeichnis
-en: This file is in the directory
-es: Este fichero se encuentra en la carpeta
-fi: Tämä tiedosto on hakemistossa
-fr: Ce fichier se trouve dans le répertoire
-it: Questo file si trova nella directory
-]
+[This file is in the directory]
 "%w".
 
 <p />
 
-[
-de: Zurück zum <a href="gwsetup?lang=%l;v=welcome.htm">Hauptmenü</a>.
-en: You can return to the <a href="gwsetup?lang=%l;v=welcome.htm">main menu</a>.
-es: Si Ud. desea regresar al <a href="gwsetup?lang=%l;v=welcome.htm">menú
-    principal</a>.
-fi: Voit palata <a href="gwsetup?lang=%l;v=welcome.htm">päävalikkoon</a>.
-fr: Vous pouvez revenir au <a href="gwsetup?lang=%l;v=welcome.htm">menu
-    principal</a>.
-it: Potete tornare al <a href="gwsetup?lang=%l;v=welcome.htm">menu
-    principale</a>.
-lv: Jûs variet atgriezties <a href="gwsetup?lang=%l;v=welcome.htm">galvenajâ
-    izvçlnç</a>.
-sv: Du kan återvända till <a href="gwsetup?lang=%l;v=welcome.htm">huvudmenyn</a>.
-]
+[You can return to the <a href="gwsetup?lang=%l;v=welcome.htm">main menu</a>.]
