--- a/bin/setup/lang/gwd_info.htm
+++ b/bin/setup/lang/gwd_info.htm
@@ -7,16 +7,7 @@
   <meta name="robots" content="none">
   <link rel="shortcut icon" href="images/favicon_gwsetup.png">
 
-  <title>[
-de: Service gwd
-en: Service gwd
-es: Servicio gwd
-fr: Service gwd
-it: Service gwd
-lv: Gwd serviss
-sv: Servicen gwd
-lv: Gwd serviss
-]
+  <title>[Service gwd]
 </title>
 %fsetup.css;
 </head>
@@ -25,63 +16,22 @@ lv: Gwd serviss
 
 <div style="background:url('images/gwlogo.png') no-repeat left top; text-align:center; height:95px; line-height:95px; color:#2f6400;">
 <h1 style="margin:0;">
-[
-de: Service gwd
-en: Service gwd
-es: Servicio gwd
-fr: Service gwd
-it: Service gwd
-lv: Gwd serviss
-sv: Servicen gwd
-lv: Gwd serviss
-]
+[Service gwd]
 </h1>
 </div>
 
 <p><p>
 
-[
-de: Um den Service zu starten:
-en: To start the service:
-es: Para lanzar el servicio:
-fr: Pour démarrer le service :
-it: Per lanciare il service:
-lv: Lai palaistu servisu:
-sv: För att starta servicen:
-lv: Lai palaistu servisu:
-]
+[To start the service:]
 
 <p>
 
-<ul><li>[
-de: Unter <b>Windows</b> verwende einen Doppelklick auf das  "gwd"-Icon,
-    dann kehre hierher zurück.
-en: Under Windows, launch the program "gwd".
-es: A partir de Windows, cliquear dos veces en el icono de "gwd", y luego
-    regrese Ud. aquí.
-fr: Sous <b>Windows</b>, lancez le programme "gwd".
-it: Sotto <b>Windows</b>, lanciate il programma "gwd".
-lv: Windows vidç - dubultklikðíis uz "gwd" ikoniòas un tad atgriezieties
-    ðeit.
-sv: Under Windows, dubbelklicka på "gwd" ikonen, gå sedan tillbaka hit.
-lv: Windows vidç - dubultklikðíis uz "gwd" ikoniòas un tad atgriezieties
-    ðeit.
-]
+<ul><li>[Under Windows, launch the program "gwd".]
 </ul>
 
 <p>
 
-<ul><li>[
-de: Unter <b>Unix</b> starte ein xterm und gib die folgenden Kommandos ein:
-en: Under Unix, launch an xterm and type the following commands:
-es: A partir de Unix, lanzar un xterm y ecribir con el teclado los comandos
-    siguientes:
-fr: Sous <b>Unix</b>, lancez un xterm et tapez les commandes suivantes :
-it: Sotto <b>Unix</b>, lanciate un xterm e digitate i seguenti comandi:
-lv: Unix vidç - palaidiet xterm un uzrakstiet sekojoðas komandas:
-sv: Under Unix, starta ett xterm och skriv följande kommandon:
-lv: Unix vidç - palaidiet xterm un uzrakstiet sekojoðas komandas:
-]
+<ul><li>[Under Unix, launch an xterm and type the following commands:]
 
 <p>
 
@@ -94,36 +44,12 @@ lv: Unix vidç - palaidiet xterm un uzrakstiet sekojoðas komandas:
 
 <p>
 
-<ul><li>[
-de: Unter <b>Linux</b> wird der Service automatisch gestartet, sofern du
-    <font color=#2f6400><b>GeneWeb</b></font> als RPM-Paket installiert
-    hast. Wenn du den Dienst gestoppt hast und ihn neu starten
-    möchtest,  dann gib als root folgendes Kommando ein:
-en: Under Linux, if you installed <font color=#2f6400><b>GeneWeb</b></font>
-    as an rpm package, the service has been automatically launched. If you
-    stopped it and want to restart it, become root and type:
-es: A partir de Linux con rpm, escriba en el taclado:
-fr: Sous <b>Linux</b>, si vous avez installé <b><font
-    color=#2f6400>GeneWeb</font></b> à partir un paquetage rpm, le
-    service a été automatiquement lancé.  Si vous
-    l’avez arrêté et voulez le relancer, devenez root et tapez :
-it: Sotto <b>Linux</b>, se avete installato <b><font
-    color=#2f6400>GeneWeb</font></b> partendo da un pacchetto rpm, il
-    service sarà automaticamente lanciato;.  Se lo avete
-    fermato e volete rilanciarlo, digitate, come root:
-lv: Linux vidç -  ja Jûs esiet uzstâdîjuði <font
-    color=#2f6400><b>GeneWeb</b></font> kâ rpm paketi, tad serviss tiks
-    automâtiski iedarbinâts. Ja Jûs to esiet apstâdinâjis un vçlaties to
-    atsâkt, tad ieejiet pamatkatalogâ un ievadiet:
-sv: Under Linux, om du installerade <font
-    color=#2f6400><b>GeneWeb</b></font> som ett rpm paket, har servicen
-    startat automatiskt. Om du har stoppat den och vill återstarta den,
-    logga in som root och skriv:
-lv: Linux vidç -  ja Jûs esiet uzstâdîjuði <font
-    color=#2f6400><b>GeneWeb</b></font> kâ rpm paketi, tad serviss tiks
-    automâtiski iedarbinâts. Ja Jûs to esiet apstâdinâjis un vçlaties to
-    atsâkt, tad ieejiet pamatkatalogâ un ievadiet:
-]
+<ul><li>[Under Linux, if you installed <font color=#2f6400><b>GeneWeb</b></font> as an rpm package, the service has been automatically launched. If you stopped it and want to restart it, become root and type:]
+%(
+Under Linux, if you installed <font color=#2f6400><b>GeneWeb</b></font> as an rp
+m package, the service has been automatically launched. If you stopped it and wa
+nt to restart it, become root and type:
+%)
 
 <p>
 
@@ -135,63 +61,20 @@ lv: Linux vidç -  ja Jûs esiet uzstâdîjuði <font
 
 <p>
 
-[
-de: Um den Service zu stoppen:
-en: To stop the service:
-es: Pora parar el servicio:
-fr: Pour arrêter le service :
-it: Per fermare il service:
-lv: Lai apstâdinâtu servisu:
-sv: För att stoppa servicen:
-lv: Lai apstâdinâtu servisu:
-]
+[To stop the service:]
 
 <p>
 
-<ul><li>[
-de: Unter <b>Windows</b> oder <b>Unix</b> drücke Control-C (bzw.
-    Strg-C)  in dem Fenster, wo gwd läuft.
-en: Under Windows or Unix, type "control C" in the window where it is
-    running.
-es: A partir de Windows o Unix, escriba en el teclado "control C",
-    (manteniendo apoyadas las dos teclas), en la "ventana" en la cual el
-    programa ha sido lanzado.
-fr: Sous <b>Windows</b> ou <b>Unix</b>, tapez "control C" dans la
-    fenêtre où il tourne.
-it: Sotto <b>Windows</b> o <b>Unix</b>, digitate "control C" nella
-    finestra dove il service è stato lanciato.
-lv: Windows vai Unix vidç - nospiediet "ctrl C" pie aktîva loga, kurâ tas
-    darbojas.
-sv: Under Windows eller Unix, tryck "control C" i fönstret där den körs.
-lv: Windows vai Unix vidç - nospiediet "ctrl C" pie aktîva loga, kurâ tas
-    darbojas.
-]
+<ul><li>[Under Windows or Unix, type "control C" in the window where it is running.]
 </ul>
 
 <p>
 
-<ul><li>[
-de: Unter <b>Linux</b> gib, sofern <font color=#2f6400><b>GeneWeb</b></font>
-    als RPM-Paket installiert ist, als root folgendes Kommando ein:
-en: Under Linux, if you installed <font color=#2f6400><b>GeneWeb</b></font>
-    as an rpm package, become root and type:
-es: A partir de Linux con rpm, escriba en el teclado:
-fr: Sous <b>Linux</b>, si vous avez installé <b><font
-    color=#2f6400>GeneWeb</font></b> par un paquetage rpm, devenez root et
-    tapez:
-it: Sotto <b>Linux</b>, se avete installato <b><font
-    color=#2f6400>GeneWeb</font></b> a partire da un pacchetto rpm, digitate,
-    come root:
-lv: Linux vidç  - ja Jûs esiet uzstâdîjis <font
-    color=#2f6400><b>GeneWeb</b></font> kâ rpm paketi, ieejiet pamatkatalogâ
-    un ievadiet:
-sv: Under Linux, om du installerade <font
-    color=#2f6400><b>GeneWeb</b></font> som ett rpm paket, logga in som root
-    och skriv:
-lv: Linux vidç  - ja Jûs esiet uzstâdîjis <font
-    color=#2f6400><b>GeneWeb</b></font> kâ rpm paketi, ieejiet pamatkatalogâ
-    un ievadiet:
-]
+<ul><li>[Under Linux, if you installed <font color=#2f6400><b>GeneWeb</b></font> as an rpm package, become root and type:]
+%(
+Under Linux, if you installed <font color=#2f6400><b>GeneWeb</b></font> as an rp
+m package, become root and type:
+%)
 
 <p>
 
