--- a/bin/setup/lang/gwd_ok.htm
+++ b/bin/setup/lang/gwd_ok.htm
@@ -7,15 +7,7 @@
   <meta name="robots" content="none">
   <link rel="shortcut icon" href="images/favicon_gwsetup.png">
 
-  <title>[
-de: Parameter geändert
-en: Parameters updated
-es: Parámetros actualizados
-fr: Paramètres mis-à-jour
-it: Parametri aggiornati
-lv: Mainîti parametri
-sv: Parametrar uppdaterade
-]
+  <title>[Parameters updated]
 </title>
 %fsetup.css;
 </head>
@@ -24,109 +16,38 @@ sv: Parametrar uppdaterade
 
 <div style="background:url('images/gwlogo.png') no-repeat left top; text-align:center; height:95px; line-height:95px; color:#2f6400;">
 <h1>
-[
-de: Parameter geändert
-en: Parameters updated
-es: Parámetros actualizados
-fr: Paramètres mis à jour
-it: Parametri aggiornati
-lv: Mainîti parametri
-sv: Parametrar uppdaterade
-]
+[Parameters updated]
 </h1>
 </div>
 
 <p>
 
-<font color=red>[
-de: Damit die Parameter wirksam werden, muß der 
-    <a href="gwsetup?lang=%l;v=gwd_info.htm">gwd-Dienst</a> 
-    (sofern er lief) gestoppt und neu gestartet werden.
-en: In order to take the parameters into account, the <a
-    href="gwsetup?lang=%l;v=gwd_info.htm">gwd service</a> must be stopped,
-    if it was running, and restarted.
-es: Para que los parámetros sean tomados en cuenta; es necesario
-    parar el <a href="gwsetup?lang=%l;v=gwd_info.htm">servicio
-    gwd</a>, en caso que el funcione, y a continuación lanzarlo
-    nuevamente.
-fr: Pour que les paramètres soient pris en compte, il faut
-    arrêter le <a href="gwsetup?lang=%l;v=gwd_info.htm">service
-    gwd</a>, s’il tourne, et le relancer.
-it: Per far prendere in considerazione i parametri, bisogna
-    fermare il <a href="gwsetup?lang=%l;v=gwd_info.htm">service
-    gwd</a>, se sta girando, e rilanciarlo.
-lv: Lai parametru maiòa iedarbotos, <a
-    href="gwsetup?lang=%l;v=gwd_info.htm">gwd serviss</a> jâapstâdina,
-    ja tas jau darbojas, un jâpalaiþ no jauna.
-sv: För att parametrarna ska kunna börja användas, måste <a
-    href="gwsetup?lang=%l;v=gwd_info.htm">gwd servicen</a> stoppas,
-    om den var igång, och sedan återstartad.
-]
+<font color=red>[In order to take the parameters into account, the <a href="gwsetup?lang=%l;v=gwd_info.htm">gwd service</a> must be stopped, if it was running, and restarted.]
+%(
+In order to take the parameters into account, the <a href="gwsetup?lang=%l;v=gwd
+_info.htm">gwd service</a> must be stopped, if it was running, and restarted.
+%)
 </font>
 
 <p>
 
-[
-de: Zu deiner Information: Die Parameter sind in der Textdatei "gwd.arg"
-    im Verzeichnis "gw" deiner
-    <font color=#2f6400><b>GeneWeb</b></font>-Installation gespeichert.
-en: Information: the parameters are recorded in a text file named "gwd.arg"
-    in the directory "gw" of your <font color=#2f6400><b>GeneWeb</b></font>
-    distribution.
-es: Información: los parámetros son registrados en el fichero
-    texto "gwd.arg", que se encuentra en la carpeta "gw", de su
-    distribución <font color=#2f6400><b>GeneWeb</b></font>.
-fr: Information : les paramètres sont enregistrés dans le
-    fichier texte "gwd.arg" qui se trouve dans le répertoire "gw"
-    de votre distribution <b><font color=#2f6400>GeneWeb</font></b>.
-it: Informazione: i parametri sono registrati nel
-    file testo "gwd.arg" che si trova nella directory "gw"
-    della vostra distribuzione <b><font color=#2f6400>GeneWeb</font></b>.
-lv: Informâcijai: parametri ir ierakstîti teksta datnç "gwd.arg" katalogâ
-    "gw" Jûsu <font color=#2f6400><b>GeneWeb</b></font> datòu komplektâ.
-sv: Information: parametrarna är lagrade i en textfil benämnd "gwd.arg"
-    i katalogen "gw" för din <font color=#2f6400><b>GeneWeb</b></font>
-    distribution.
-]
+[Information: the parameters are recorded in a text file named "gwd.arg" in the directory "gw" of your <font color=#2f6400><b>GeneWeb</b></font> distribution.]
+%(
+Information: the parameters are recorded in a text file named "gwd.arg" in the d
+irectory "gw" of your <font color=#2f6400><b>GeneWeb</b></font> distribution.
+%)
 
 <p>
 
-[
-de: Hier ist der Inhalt der Datei:
-en: Here is its contents:
-es: He aquí su contenido:
-fr: Voici son contenu :
-it: Ecco il suo contenuto:
-lv: Ðeit ir "gwd.arg" saturs:
-sv: Här är dess innehåll:
-]
+[Here is its contents:]
 
 <p>
 
 <dl><dt><dd>
 <pre>
-%r{- [
-de: Datei leer
-en: empty file
-es: fichero vacio
-fr: fichier vide
-it: file vuoto
-sv: tom fil
-]
+%r{- [empty file]
 -}
 </pre>
 </dl>
 
-[
-de: Zurück zum <a href="gwsetup?lang=%l;v=welcome.htm">Hauptmenü</a>.
-en: You can return to the <a href="gwsetup?lang=%l;v=welcome.htm">main menu</a>.
-es: Ud. puede regresar al <a href="gwsetup?lang=%l;v=welcome.htm">menú
-    principal</a>.
-fr: Vous pouvez revenir au <a href="gwsetup?lang=%l;v=welcome.htm">menu
-    principal</a>.
-it: Potete tornare al <a href="gwsetup?lang=%l;v=welcome.htm">menu
-    principale</a>.
-lv: Jûs variet atgriezties uz <a href="gwsetup?lang=%l;v=welcome.htm">galveno
-    izvçlni</a>.
-sv: Du kan återvända till <a href="gwsetup?lang=%l;v=welcome.htm">huvudmenyn</a>.
-]
+[You can return to the <a href="gwsetup?lang=%l;v=welcome.htm">main menu</a>.]
