--- a/bin/setup/lang/gwf.htm
+++ b/bin/setup/lang/gwf.htm
@@ -7,15 +7,7 @@
   <meta name="robots" content="none">
   <link rel="shortcut icon" href="images/favicon_gwsetup.png">
 
-  <title>[
-de: Parameter
-en: Parameters
-es: Parámetros
-fr: Paramètres
-it: Parametri
-lv: Parametri
-sv: parametrar
-]
+  <title>[Parameters]
 </title>
 %fsetup.css;
 </head>
@@ -24,15 +16,7 @@ sv: parametrar
 
 <div style="background:url('images/gwlogo.png') no-repeat left top; text-align:center; height:95px; line-height:95px; color:#2f6400;">
 <h1 style="margin:0;">
-[
-de: Parameter
-en: Parameters
-es: Parámetros
-fr: Paramètres
-it: Parametri
-lv: Parametri
-sv: Parametrar
-]
+[Parameters]
 </h1>
 </div>
 
@@ -41,17 +25,7 @@ sv: Parametrar
 <form method=GET action="gwf">
 <input type=hidden name=lang value="%l">
 <ul><li>
-[
-de: Bitte wähle deine Datenbank mit dem zugehörigen Schalter:
-en: Select your database by clicking on the corresponding button:
-es: Seleccione Ud. su base de datos cliqueando en el botón asociado:
-fr: Sélectionnez votre base de données en cliquant sur le
-    bouton associé:
-it: Selezionate la vostra base di dati cliccando sul
-    bottone associato:
-lv: Ieklikðíinot atbilstoðjâ podziòâ, izvçlieties savu datu bâzi:
-sv: Välj din databas genom att klicka på motsvarande knapp:
-]
+[Select your database by clicking on the corresponding button:]
 
 <p>
 
@@ -61,41 +35,17 @@ sv: Välj din databas genom att klicka på motsvarande knapp:
 <td><input type=radio name=anon value="%a">   </td>
 <td><a href="http://%m:%P/%a">%a</a></td>
 </tr>|
-<tr align=left><td>- [
-de: keine Datenbank vorhanden
-en: there is no database at present
-es: actualmente no existe ninguna base de datos
-fr: il n’y a aucune base de données actuellement
-it: attualmente non esiste nessuna base di dati
-lv: patreiz nav nevienas datu bazes
-sv: det finns ingen databas för tillfället
-]
+<tr align=left><td>- [there is no database at present]
 </tr></td>}
 </table>
 
 <p>
 <li>
-[
-de: Dann drücke diesen Knopf:
-en: Then push this button:
-es: Apoye a continuación en este botón:
-fr: Puis appuyez sur ce bouton :
-it: Poi cliccate su questo bottone:
-lv: Tad nospiediet ðo podziòu:
-sv: Tryck sedan på denna knapp:
-]
+[Then push this button:]
 
 <p>
 
-<input type=submit value="[
-de: Konfigurieren
-en: Configure
-es: Configurar
-fr: Configurer
-it: Configurare
-lv: Darîts
-sv: Konfigurera
-]
+<input type=submit value="[Configure]
 ">
 </ul>
 </form>
