--- a/bin/setup/lang/gwf_ok.htm
+++ b/bin/setup/lang/gwf_ok.htm
@@ -7,15 +7,7 @@
   <meta name="robots" content="none">
   <link rel="shortcut icon" href="images/favicon_gwsetup.png">
 
-  <title>[
-de: Parameter geändert
-en: Parameters updated
-es: Parámetros de actualización
-fr: Paramètres mis-à-jour
-it: Parametri di aggiornamento
-lv: Parametri ir mainîti
-sv: Parametrar uppdaterade
-]
+  <title>[Parameters updated]
 </title>
 %fsetup.css;
 </head>
@@ -24,33 +16,13 @@ sv: Parametrar uppdaterade
 
 <div style="background:url('images/gwlogo.png') no-repeat left top; text-align:center; height:95px; line-height:95px; color:#2f6400;">
 <h1 style="margin:0;">
-[
-de: Parameter geändert
-en: Parameters updated
-es: Parámetros de actualización
-fr: Paramètres mis à jour
-it: Parametri di aggiornamento
-lv: Parametri ir mainîti
-sv: Parametrar uppdaterade
-]
+[Parameters updated]
 </h1>
 </div>
 
 <p>
 
-[
-de: Hier kannst du deine Parameteränderung ausprobieren:
-en: Here is an access to your database in order to test your parameters
-    changing:
-es: He aquí un acceso a su base para probar los cambios de
-    parámetros.
-fr: Voici un accès à votre base pour tester vos changements
-    de paramètres.
-it: Ecco un accesso alla vostra base per testare le modifiche dei parametri.
-lv: Ðeit Jûs variet piekïût savai datu bâzei, lai pârbaudîtu, kâ izskatâs
-    Jûsu datu bâze ar jauniem parametriem:
-sv: Här är en åtkomst till din databas för att testa dina parametrar:
-]
+[Here is an access to your database in order to test your parameters changing:]
 
 <p>
 
@@ -62,69 +34,20 @@ sv: Här är en åtkomst till din databas för att testa dina parametrar:
 
 <p>
 
-[
-de: Zu deiner Information:
-en: For information:
-es: Por información:
-fr: Pour information :
-it: Per informazione:
-lv: Informâcijai:
-sv: För information:
-]
+[For information:]
 
 <ul>
 
-<li>[
-de: Die Parameter sind in der Textdatei "%a.gwf" im Verzeichnis "%w".
-en: The parameters are recorded in the text file "%a.gwf" in the
-    directory "%w".
-es: Los parámetros son registrados en el fichero
-    texto "%a.gwf" en la carpeta "%w".
-fr: Les paramètres sont enregistrés dans le fichier
-    texte "%a.gwf" dans le répertoire "%w".
-it: I parametri sono stati registrati nel file
-    testo "%a.gwf" nella directory "%w".
-lv: Ðie parametri ir ierakstîti teksta datnç "%a.gwf" katalogâ "%w".
-sv: Parametrarna har sparats i textfilen "%a.gwf" i katalogen "%w".
-]
+<li>[The parameters are recorded in the text file "%a.gwf" in the directory "%w".]
 
-<li>[
-de: Falls du einen Text angegeben hast, der am Fuß der Seiten angezeigt
-    werden soll, wurde er in der Datei "%a.trl" im Unterverzeichnis "lang"
-    des Verzeichnisses "%w" gespeichert.
-en: If you gave a text to put in the bottom of the pages, this text
-    is recorded in the file named "%a.trl" in the subdirectory "lang" of
-    the directory "%w".
-es: Si Ud. ha escogido la opción de agregar un texto en la parte inferior de las
-    páginas, este texto es registrado en el fichero denominado "%a.trl"
-    en la sub-carpeta "lang" de la carpeta "%w".
-fr: Si vous avez donné un texte à mettre au bas des
-    pages, ce texte est enregistré dans la fichier de nom "%a.trl"
-    dans le sous-répertoire "lang" du répertoire "%w".
-it: Se avete scelto l'opzione di aggiungere un testo in piede di pagina,
-    questo testo è registrato nel file chiamato "%a.trl" nella
-    sub-directory "lang" della directory "%w".
-lv: Ja Jûs norâdîjât arî katras lappuses noslçguma tekstu, tad ðis teksts
-    ir ierakstîts datnç "%a.trl" kataloga "%w" apakðkatalogâ "lang".
-sv: Om du angav en text som ska stå längst ner på sidan, har denna text
-    sparats i filen benämnd "%a.trl" i underkatalogen "lang" för
-    katalogen "%w".
-]
+<li>[If you gave a text to put in the bottom of the pages, this text is recorded in the file named "%a.trl" in the subdirectory "lang" of the directory "%w".]
+%(
+If you gave a text to put in the bottom of the pages, this text is recorded in t
+he file named "%a.trl" in the subdirectory "lang" of the directory "%w".
+%)
 
 </ul>
 
 <p>
 
-[
-de: Zurück zum <a href="gwsetup?lang=%l;v=welcome.htm">Hauptmenü</a>.
-en: You can return to the <a href="gwsetup?lang=%l;v=welcome.htm">main menu</a>.
-es: Ud. puede regresar al <a href="gwsetup?lang=%l;v=welcome.htm">menú
-    principal</a>.
-fr: Vous pouvez revenir au <a href="gwsetup?lang=%l;v=welcome.htm">menu
-    principal</a>.
-it: Potete tornare al <a href="gwsetup?lang=%l;v=welcome.htm">menu
-    principale</a>.
-lv: Jûs variet atgriezties <a href="gwsetup?lang=%l;v=welcome.htm">galvenajâ
-    izvçlnç</a>.
-sv: Du kan återvända till <a href="gwsetup?lang=%l;v=welcome.htm">huvudmenyn</a>.
-]
+[You can return to the <a href="gwsetup?lang=%l;v=welcome.htm">main menu</a>.]
