--- a/bin/setup/lang/gwfix_ok.htm
+++ b/bin/setup/lang/gwfix_ok.htm
@@ -7,10 +7,7 @@
   <meta name="robots" content="none">
   <link rel="shortcut icon" href="images/favicon_gwsetup.png">
 
-  <title>[
-en: Gwfixbase messages
-fr: Messages gwfixbase
-]
+  <title>[Gwfixbase messages]
 </title>
 %fsetup.css;
 </head>
@@ -19,42 +16,26 @@ fr: Messages gwfixbase
 
 <div style="background:url('images/gwlogo.png') no-repeat left top; text-align:center; height:95px; line-height:95px; color:#2f6400;">
 <h1 style="margin:0;">
-[
-en: Gwfixbase messages
-fr: Messages gwfixbase
-]
+[Gwfixbase messages]
 </h1>
 </div>
 
 <p />
-[
-en: Done. The operation is terminated.
-fr: L’opération est terminée.
-]
+[Done. The operation is terminated.]
 
 <p />
-[
-de: Zurück zum <a href="gwsetup?lang=%l;v=welcome.htm">Hauptmenü</a>.
-en: You can also return to the <a href="gwsetup?lang=%l;v=welcome.htm">main
-    menu</a>.
-es: Ud puede también regresar al <a
-    href="gwsetup?lang=%l;v=welcome.htm">menú principal</a>.
-fi: Tai voit palata <a href="gwsetup?lang=%l;v=welcome.htm">päävalikkoon</a>.
-fr: Vous pouvez aussi revenir au <a href="gwsetup?lang=%l;v=welcome.htm">menu
-    principal</a>.
-it: Potete anche tornare al <a href="gwsetup?lang=%l;v=welcome.htm">menu
-    principale</a>.
-lv: Jûs variet arî atgriezties <a
-    href="gwsetup?lang=%l;v=welcome.htm">galvenajâ izvçlnç </a>.
-sv: Du kan också återvända till <a
-    href="gwsetup?lang=%l;v=welcome.htm">huvudmenyn</a>.
-]
+[You can also return to the <a href="gwsetup?lang=%l;v=welcome.htm">main menu</a>.]
+%(
+You can also return to the <a href="gwsetup?lang=%l;v=welcome.htm">main menu</a>
+.
+%)
 
 <br /><p />
 
-[
-en: Click <a href="gwsetup?lang=%l;v=bso_comm.htm">here</a> for the results in "comm.log":
-fr: Cliquer <a href="gwsetup?lang=%l;v=bso_comm.htm">ici</a> pour les résultats dans "comm.log".
-]
+[Click <a href="gwsetup?lang=%l;v=bso_comm.htm">here</a> for the results in "comm.log":]
+%(
+Click <a href="gwsetup?lang=%l;v=bso_comm.htm">here</a> for the results in "comm
+.log":
+%)
 
 <p />
