--- a/bin/setup/lang/list.htm
+++ b/bin/setup/lang/list.htm
@@ -7,16 +7,7 @@
   <meta name="robots" content="none">
   <link rel="shortcut icon" href="images/favicon_gwsetup.png">
 
-  <title>[
-de: Databases
-en: Databases
-es: Bases de datos
-fi: Tietokannat
-fr: Bases de données
-it: Basi di dati
-lv: Datubâzes
-sv: Databaser
-]
+  <title>[Databases]
 </title>
 %fsetup.css;
 </head>
@@ -25,72 +16,32 @@ sv: Databaser
 
 <div style="background:url('images/gwlogo.png') no-repeat left top; text-align:center; height:95px; line-height:95px; color:#2f6400;">
 <h1 style="margin:0;">
-[
-de: Datenbanken
-en: Databases
-es: Bases de datos
-fi: Tietokannat
-fr: Bases de données
-it: Basi di dati
-lv: Datubâzes
-sv: Databaser
-]
+[Databases]
 </h1>
 </div>
 
 <p />
 
-[
-de: Um eine Datenbank abfragen zu können, muß der <a
-    href="http://%m:%z/gwsetup?lang=%l;v=gwd_info.htm">gwd-Dienst</a>  gestartet worden
-    sein.
-en: To consult a database, the <a href="http://%m:%P/gwsetup?lang=%l;v=gwd_info.htm">gwd
-    service</a> must have been launched.
-es: Para consultar una base de datos, es necesario que el <a
-    href="http://%m:%z/gwsetup?lang=%l;v=gwd_info.htm">servicio gwd</a> sea lanzado;.
-fi: Lukieksasi tietokantaa <a href="gwsetup?lang=%l;v=gwd_info.htm">gwd
-    palvelun</a> täytyy olla käynnissä.
-fr: Pour consulter une base de données, il faut que le <a
-    href="http://%m:%z/gwsetup?lang=%l;v=gwd_info.htm">service gwd</a> soit lancé.
-it: Per consultare una base di dati bisogna che il <a
-    href="http://%m:%z/gwsetup?lang=%l;v=gwd_info.htm">service gwd</a> sia lanciato.
-lv: Lai uzsâktu darbu ar datu bâzçm, jâbût palaistam <a
-    href="http://%m:%z/gwsetup?lang=%l;v=gwd_info.htm">gwd servisam</a>.
-sv: För att konsultera en databas, måste <a
-    href="http://%m:%z/gwsetup?lang=%l;v=gwd_info.htm">gwd servicen</a> vara startad.
-]
+[To consult a database, the <a href="http://%m:%P/gwsetup?lang=%l;v=gwd_info.htm">gwd service</a> must have been launched.]
+%(
+To consult a database, the <a href="http://%m:%P/gwsetup?lang=%l;v=gwd_info.htm"
+>gwd service</a> must have been launched.
+%)
 
 <p />
 
 <ul>
 
 %b{<li><a href="http://%m:%P/%a?lang=%l">%a</a>|
-<li>[
-de: keine Datenbank vorhanden
-en: there is no database at present
-es: ninguna base de datos existe actualmente
-fi: yhtään tietokantaa ei ole saatavilla
-fr: il n’y a aucune base de données actuellement
-it: attualmente non esiste nessuna base di dati
-lv: patreiz nav nevienas datu bâzes
-sv: det finns ingen databas för närvarande
-]
+<li>[there is no database at present]
 }
 
 </ul>
 
 <p />
-[
-de: Zurück zum <a href="http://%m:%z/gwsetup?lang=%l;v=welcome.htm">Hauptmenü</a>.
-en: Or go back to the <a href="http://%m:%z/gwsetup?lang=%l;v=welcome.htm">main menu</a>.
-es: O regrese Ud. al <a href="http://%m:%z/gwsetup?lang=%l;v=welcome.htm">menú
-    principal</a>.
-fi: Tai mene takaisin <a href="http://%m:%z/gwsetup?lang=%l;v=welcome.htm">päävalikkoon</a>.
-fr: Ou revenez au <a href="http://%m:%z/gwsetup?lang=%l;v=welcome.htm">menu principal</a>.
-it: O tornate al <a href="http://%m:%z/gwsetup?lang=%l;v=welcome.htm">menu principale</a>.
-lv: Vai atgriezieties <a href="http://%m:%z/gwsetup?lang=%l;v=welcome.htm">galvenajâ
-    izvçlnç</a>.
-sv: Eller gå tillbaka till <a
-    href="http://%m:%z/gwsetup?lang=%l;v=welcome.htm">huvudmenyn</a>.
-]
+[Or go back to the <a href="http://%m:%z/gwsetup?lang=%l;v=welcome.htm">main menu</a>.]
+%(
+Or go back to the <a href="http://%m:%z/gwsetup?lang=%l;v=welcome.htm">main menu
+</a>.
+%)
 
