--- a/bin/setup/lang/main.htm
+++ b/bin/setup/lang/main.htm
@@ -7,363 +7,108 @@
   <meta name="robots" content="none">
   <link rel="shortcut icon" href="images/favicon_gwsetup.png">
 
-  <title>Gwsetup - [
-de: Hauptmenü
-en: Main menu
-es: Menú principal
-fi: Päävalikko
-fr: Menu principal
-it: Menu principale
-lv: Galvenâ izvçlne
-sv: Huvudmeny
-]
+  <title>Gwsetup - [Main menu]
 </title>
 %fsetup.css;
 </head>
 
 <body %Vbody_prop;>
 
-<center><h1><font color=#2f6400>Gwsetup - [
-de: Hauptmenü
-en: Main menu
-es: Menú principal
-fi: Päävalikko
-fr: Menu principal
-it: Menu principale
-lv: Galvenâ izvçlne
-sv: Huvudmeny
-]
+<center><h1><font color=#2f6400>Gwsetup - [Main menu]
 </font></h1></center>
 
 <p />
 
-<b>[
-de: Betrachte…
-en: Consult…
-es: Consultar…
-fi: Konsultoi…
-fr: Consulter…
-it: Consultare…
-lv: Darboties ar…
-sv: Konsultera…
-]
+<b>[Consult…]
 </b>
 
 <p />
 
 <ul>
 
-<li>[
-de: die bestehenden <a href="gwsetup?lang=%l;v=list.htm">Datenbanken</a>
-en: the existing <a href="gwsetup?lang=%l;v=list.htm">databases</a>
-es: las <a href="gwsetup?lang=%l;v=list.htm">bases de datos</a> existentes
-fi: luodut <a href="gwsetup?lang=%l;v=list.htm">tietokannat</a>
-fr: les <a href="gwsetup?lang=%l;v=list.htm">bases de
-    données</a> existantes
-it: le <a href="gwsetup?lang=%l;v=list.htm">basi di
-    dati</a> esistenti
-lv: esoðajâm <a href="gwsetup?lang=%l;v=list.htm">datu bâzçm</a>
-sv: de existerande <a href="gwsetup?lang=%l;v=list.htm">databaserna</a>
-]
+<li>[the existing <a href="gwsetup?lang=%l;v=list.htm">databases</a>]
 
-<li>[
-de: die <a href="gwsetup?lang=%l;v=traces.htm">Trace-Ausgaben des
-    letzten Kommandos</a>.
-en: the <a href="gwsetup?lang=%l;v=traces.htm">traces of the
-    latest command</a>.
-es: las <a href="gwsetup?lang=%l;v=traces.htm">trazas del
-    último commando</a> efectuado
-fi: <a href="gwsetup?lang=%l;v=traces.htm">viimeiset komennot</a>.
-fr: les <a href="gwsetup?lang=%l;v=traces.htm">traces de la
-    dernière commande</a> effectuée
-it: le <a href="gwsetup?lang=%l;v=traces.htm">tracce dell'
-    ultimo comando</a> effettuato
-lv: <a href="gwsetup?lang=%l;v=traces.htm">pçdçjâs komandas darbîbas pçdâm</a>
-sv: <a href="gwsetup?lang=%l;v=traces.htm">utskrifterna från
-    det senaste kommandot</a>.
-]
+<li>[the <a href="gwsetup?lang=%l;v=traces.htm">traces of the latest command</a>.]
 
 </ul>
 
 <p />
 
-<b>[
-de: Lege eine Datenbank an…
-en: Create a database…
-es: Crear una base de datos…
-fi: Luo tietokanta…
-fr: Créer une base de données…
-it: Creare una base di dati…
-lv: Izveidot datu bâzi…
-sv: Skapa en databas…
-]
+<b>[Create a database…]
 </b>
 
 <p />
 
 <ul>
 
-<li>[
-de: mit der <a href="gwsetup?lang=%l;v=simple.htm">einfachen Methode</a>
-en: with the <a href="gwsetup?lang=%l;v=simple.htm">simple method</a>
-es: con el <a href="gwsetup?lang=%l;v=simple.htm">método simple</a>
-fi: <a href="gwsetup?lang=%l;v=simple.htm">yksinkertaisella tavalla</a>
-fr: avec la <a href="gwsetup?lang=%l;v=simple.htm">méthode
-    simple</a>
-it: Col <a href="gwsetup?lang=%l;v=simple.htm">metodo
-    semplice</a>
-lv: <a href="gwsetup?lang=%l;v=simple.htm">parastajâ veidâ</a>
-sv: med en <a href="gwsetup?lang=%l;v=simple.htm">enkel metod</a>
-]
+<li>[with the <a href="gwsetup?lang=%l;v=simple.htm">simple method</a>]
 
-<li>[
-de: aus einer <a href="gwsetup?lang=%l;v=ged2gwb.htm">GEDCOM-Datei</a>
-en: from a <a href="gwsetup?lang=%l;v=ged2gwb.htm">GEDCOM file</a>
-es: a partir de un <a href="gwsetup?lang=%l;v=ged2gwb.htm">fichero GEDCOM</a>
-fi: <a href="gwsetup?lang=%l;v=ged2gwb.htm">GEDCOM tiedostosta</a>
-fr: à partir d’un <a
-    href="gwsetup?lang=%l;v=ged2gwb.htm">fichier GEDCOM</a>
-it: partendo da <a
-    href="gwsetup?lang=%l;v=ged2gwb.htm">un file GEDCOM</a>
-lv: no <a href="gwsetup?lang=%l;v=ged2gwb.htm">GEDCOM datnes</a>
-sv: från en <a href="gwsetup?lang=%l;v=ged2gwb.htm">GEDCOM-fil</a>
-]
+<li>[from a <a href="gwsetup?lang=%l;v=ged2gwb.htm">GEDCOM file</a>]
 
-<li>[
-de: aus einer <a href="gwsetup?lang=%l;v=ged2gwb2.htm">GEDCOM-Datei (ged2gwb2)</a>
-en: from a <a href="gwsetup?lang=%l;v=ged2gwb2.htm">GEDCOM file (ged2gwb2)</a>
-es: a partir de un <a href="gwsetup?lang=%l;v=ged2gwb2.htm">fichero GEDCOM (ged2gwb2)</a>
-fi: <a href="gwsetup?lang=%l;v=ged2gwb2.htm">GEDCOM tiedostosta (ged2gwb2)</a>
-fr: à partir d’un <a
-    href="gwsetup?lang=%l;v=ged2gwb2.htm">fichier GEDCOM (ged2gwb2)</a>
-it: partendo da <a
-    href="gwsetup?lang=%l;v=ged2gwb2.htm">un file GEDCOM (ged2gwb2)</a>
-lv: no <a href="gwsetup?lang=%l;v=ged2gwb2.htm">GEDCOM datnes (ged2gwb2)</a>
-sv: från en <a href="gwsetup?lang=%l;v=ged2gwb2.htm">GEDCOM-fil (ged2gwb2)</a>
-]
+<li>[from a <a href="gwsetup?lang=%l;v=ged2gwb2.htm">GEDCOM file (ged2gwb2)</a>]
 
-<li>[
-de: aus einer <a href="gwsetup?lang=%l;v=gwc.htm">GeneWeb-Quelldatei</a>
-en: from a <a href="gwsetup?lang=%l;v=gwc.htm">GeneWeb source file</a>
-es: a partir de un <a href="gwsetup?lang=%l;v=gwc.htm">fichero fuente
-    GeneWeb</a>
-fi: <a href="gwsetup?lang=%l;v=gwc.htm">GeneWeb lähdetiedostosta</a>
-fr: à partir d’un <a href="gwsetup?lang=%l;v=gwc.htm">fichier
-    source GeneWeb</a>
-it: partendo da un <a href="gwsetup?lang=%l;v=gwc.htm">file
-    sorgente GeneWeb</a>
-lv: no <a href="gwsetup?lang=%l;v=gwc.htm">GeneWeb datnes</a>
-sv: från en <a href="gwsetup?lang=%l;v=gwc.htm">GeneWeb källfil</a>
-]
+<li>[from a <a href="gwsetup?lang=%l;v=gwc.htm">GeneWeb source file</a>]
 
-<li>[
-de: aus einer <a href="gwsetup?lang=%l;v=gwc2.htm">GeneWeb-Quelldatei (gwc2)</a>
-en: from a <a href="gwsetup?lang=%l;v=gwc2.htm">GeneWeb source file (gwc2)</a>
-es: a partir de un <a href="gwsetup?lang=%l;v=gwc2.htm">fichero fuente
-    GeneWeb (gwc2)</a>
-fi: <a href="gwsetup?lang=%l;v=gwc2.htm">GeneWeb lähdetiedostosta (gwc2)</a>
-fr: à partir d’un <a href="gwsetup?lang=%l;v=gwc2.htm">fichier
-    source GeneWeb (gwc2)</a>
-it: partendo da un <a href="gwsetup?lang=%l;v=gwc2.htm">file
-    sorgente GeneWeb (gwc2)</a>
-lv: no <a href="gwsetup?lang=%l;v=gwc2.htm">GeneWeb datnes (gwc2)</a>
-sv: från en <a href="gwsetup?lang=%l;v=gwc2.htm">GeneWeb källfil (gwc2)</a>
-]
+<li>[from a <a href="gwsetup?lang=%l;v=gwc2.htm">GeneWeb source file (gwc2)</a>]
 
 </ul>
 
 <p />
 
-<b>[
-de: Extrahiere aus einer Datenbank…
-en: Extract from a database…
-es: Extraer de una base de datos…
-fi: Pura tietokannasta…
-fr: Extraire d’une base de données…
-it: Estrarre da una base di dati…
-lv: Izveidot no datu bâzes…
-sv: Exportera från en databas…
-]
+<b>[Extract from a database…]
 </b>
 
 <p />
 
 <ul>
 
-<li>[
-de: eine <a href="gwsetup?lang=%l;v=gwb2ged.htm">GEDCOM-Datei</a>
-en: a <a href="gwsetup?lang=%l;v=gwb2ged.htm">GEDCOM file</a>
-es: un <a href="gwsetup?lang=%l;v=gwb2ged.htm">fichero GEDCOM</a>
-fi: <a href="gwsetup?lang=%l;v=gwb2ged.htm">GEDCOM tiedosto</a>
-fr: un <a href="gwsetup?lang=%l;v=gwb2ged.htm">fichier GEDCOM</a>
-it: un <a href="gwsetup?lang=%l;v=gwb2ged.htm">file GEDCOM</a>
-lv: <a href="gwsetup?lang=%l;v=gwb2ged.htm">GEDCOM datni</a>
-sv: en <a href="gwsetup?lang=%l;v=gwb2ged.htm">GEDCOM-fil</a>
-]
+<li>[a <a href="gwsetup?lang=%l;v=gwb2ged.htm">GEDCOM file</a>]
 
-<li>[
-de: eine <a href="gwsetup?lang=%l;v=gwu.htm">GeneWeb-Quelldatei</a>
-en: a <a href="gwsetup?lang=%l;v=gwu.htm">GeneWeb source file</a>
-es: un <a href="gwsetup?lang=%l;v=gwu.htm">fichero fuente GeneWeb</a>
-fi: <a href="gwsetup?lang=%l;v=gwu.htm">GeneWeb lähdetiedosto</a>
-fr: un <a href="gwsetup?lang=%l;v=gwu.htm">fichier source GeneWeb</a>
-it: un <a href="gwsetup?lang=%l;v=gwu.htm">file sorgente GeneWeb</a>
-lv: <a href="gwsetup?lang=%l;v=gwu.htm">GeneWeb datni</a>
-sv: en <a href="gwsetup?lang=%l;v=gwu.htm">GeneWeb källfil</a>
-]
+<li>[a <a href="gwsetup?lang=%l;v=gwu.htm">GeneWeb source file</a>]
 
 </ul>
 
 <p />
 
-<b>[
-de: Funktion auf eine Datenbank anwenden….
-en: Apply on a database…
-es: Aplicar a una base de datos…
-fi: Hyväksy tietokantaan…
-fr: Appliquer sur une base de données…
-it: Applicare su una base di dati…
-lv: Veikt sekojoðas darbîbas ar datu bâzi…
-sv: Applicera på en databas…
-]
+<b>[Apply on a database…]
 </b>
 
 <p />
 
 <ul>
 
-<li>[
-de: <a href="gwsetup?lang=%l;v=cleanup.htm">Aufräumen</a>
-en: the <a href="gwsetup?lang=%l;v=cleanup.htm">cleaning up</a>
-es: una <a href="gwsetup?lang=%l;v=cleanup.htm">limpieza</a>
-fi: <a href="gwsetup?lang=%l;v=cleanup.htm">puhdistus</a>
-fr: le <a href="gwsetup?lang=%l;v=cleanup.htm">nettoyage</a>
-it: una <a href="gwsetup?lang=%l;v=cleanup.htm">pulizia</a>
-lv: <a href="gwsetup?lang=%l;v=cleanup.htm">sakopðanu</a>
-sv: <a href="gwsetup?lang=%l;v=cleanup.htm">upprensning</a>
-]
+<li>[the <a href="gwsetup?lang=%l;v=cleanup.htm">cleaning up</a>]
 
-<li>[
-de: <a href="gwsetup?lang=%l;v=rename.htm">Umbenennen</a>
-en: the <a href="gwsetup?lang=%l;v=rename.htm">renaming</a>
-es: un <a href="gwsetup?lang=%l;v=rename.htm">cambio de nombre</a>
-fi: <a href="gwsetup?lang=%l;v=rename.htm">uudelleen nimeäminen</a>
-fr: le <a href="gwsetup?lang=%l;v=rename.htm">renommage</a>
-it: un <a href="gwsetup?lang=%l;v=rename.htm">cambio di nome</a>
-lv: <a href="gwsetup?lang=%l;v=rename.htm">pârsaukðanu</a>
-sv: <a href="gwsetup?lang=%l;v=rename.htm">omdöpning</a>
-]
+<li>[the <a href="gwsetup?lang=%l;v=rename.htm">renaming</a>]
 
-<li>[
-de: <a href="gwsetup?lang=%l;v=delete.htm">Löschen</a>
-en: the <a href="gwsetup?lang=%l;v=delete.htm">deletion</a>
-es: una <a href="gwsetup?lang=%l;v=delete.htm">supresión</a>
-fi: <a href="gwsetup?lang=%l;v=delete.htm">poisto</a>
-fr: la <a href="gwsetup?lang=%l;v=delete.htm">suppression</a>
-it: una <a href="gwsetup?lang=%l;v=delete.htm">cancellazione</a>
-lv: <a href="gwsetup?lang=%l;v=delete.htm">izmeðanu</a>
-sv: <a href="gwsetup?lang=%l;v=delete.htm">radering</a>
-]
+<li>[the <a href="gwsetup?lang=%l;v=delete.htm">deletion</a>]
 
-<li>[
-de: <a href="gwsetup?lang=%l;v=merge.htm">Zusammenführen</a> mit
-    anderen Datenbanken
-en: the <a href="gwsetup?lang=%l;v=merge.htm">merging</a> with other databases
-fi: <a href="gwsetup?lang=%l;v=merge.htm">yhdistyminen</a> muiden tietokantojen
-    kanssa
-fr: la <a href="gwsetup?lang=%l;v=merge.htm">fusion</a> avec d’autres bases
-it: la <a href="gwsetup?lang=%l;v=merge.htm">fusione</a> con altre basi
-sv: <a href="gwsetup?lang=%l;v=merge.htm">sammanslagning</a> med andra
-    databaser
-]
+<li>[the <a href="gwsetup?lang=%l;v=merge.htm">merging</a> with other databases]
 
-<li>[
-de: <a href="gwsetup?lang=%l;v=save.htm">Sichern und Restaurieren</a>
-en: the <a href="gwsetup?lang=%l;v=save.htm">saving and restoring</a>
-es: una <a href="gwsetup?lang=%l;v=save.htm">copia de seguridad y una
-    restauración</a>
-fi: <a href="gwsetup?lang=%l;v=save.htm">tallentaminen ja palautus</a>
-fr: la <a href="gwsetup?lang=%l;v=save.htm">sauvegarde et restauration</a>
-it: un <a href="gwsetup?lang=%l;v=save.htm">backup and restore</a>
-lv: <a href="gwsetup?lang=%l;v=save.htm">saglabâðanu un atjaunoðanu</a>
-sv: <a href="gwsetup?lang=%l;v=save.htm">spara och återskapa</a>
-]
+<li>[the <a href="gwsetup?lang=%l;v=save.htm">saving and restoring</a>]
 
-<li>[
-de: <a href="gwsetup?lang=%l;v=consang.htm">Initialisierung der
-    Blutsverwandtschaften</a>
-en: the <a href="gwsetup?lang=%l;v=consang.htm">initialisation of
-    consanguinities</a>
-es: la <a href="gwsetup?lang=%l;v=consang.htm">inicialización de las
-    consanguinidades</a>
-fi: <a href="gwsetup?lang=%l;v=consang.htm">perheenjäsenten yhdistäminen</a>
-fr: l’<a href="gwsetup?lang=%l;v=consang.htm">initialisation des
-    consanguinités</a>
-it: l'<a href="gwsetup?lang=%l;v=consang.htm">inizializzazione delle
-    consanguineità</a>
-lv: <a href="gwsetup?lang=%l;v=consang.htm">asinsradniecîbas sakârtoðana</a>
-sv: <a href="gwsetup?lang=%l;v=consang.htm">beräkning av
-    blodsband</a>
-]
+<li>[the <a href="gwsetup?lang=%l;v=consang.htm">initialisation of consanguinities</a>]
+%(
+the <a href="gwsetup?lang=%l;v=consang.htm">initialisation of consanguinities</a
+>
+%)
 
-<li>[
-de: <a href="gwsetup?lang=%l;v=update_nldb.htm">update_nldb</a>
-en: <a href="gwsetup?lang=%l;v=update_nldb.htm">update_nldb</a>
-es: <a href="gwsetup?lang=%l;v=update_nldb.htm">update_nldb</a>
-fi: <a href="gwsetup?lang=%l;v=update_nldb.htm">update_nldb</a>
-fr: <a href="gwsetup?lang=%l;v=update_nldb.htm">update_nldb</a>
-it: <a href="gwsetup?lang=%l;v=update_nldb.htm">update_nldb</a>
-lv: <a href="gwsetup?lang=%l;v=update_nldb.htm">update_nldb</a>
-sv: <a href="gwsetup?lang=%l;v=update_nldb.htm"update_nldb></a>
-]
+<li>[<a href="gwsetup?lang=%l;v=update_nldb.htm">update_nldb</a>]
 
 </ul>
 
 <p />
 
-<b>[
-de: Konfiguriere…
-en: Configure…
-es: Configurar…
-fi: Konfiguroi…
-fr: Configurer…
-it: Configurare…
-lv: Mainît…
-sv: Konfigurera…
-]
+<b>[Configure…]
 </b>
 
 <p>
 
 <ul>
 
-<li>[
-de: die Parameter einer <a href="gwsetup?lang=%l;v=gwf.htm">Datenbank</a>
-en: the parameters of a <a href="gwsetup?lang=%l;v=gwf.htm">database</a>
-es: los parámetros de una <a
-    href="gwsetup?lang=%l;v=gwf.htm">base de datos</a>
-fi: <a href="gwsetup?lang=%l;v=gwf.htm">tietokannan</a> parametrit
-fr: les paramètres d’une <a href="gwsetup?lang=%l;v=gwf.htm">base
-    de données</a>
-it: i parametri di une <a href="gwsetup?lang=%l;v=gwf.htm">base
-    di dati</a>
-lv: <a href="gwsetup?lang=%l;v=gwf.htm">datu bâzes</a>  parametrus
-sv: parametrarna för en <a href="gwsetup?lang=%l;v=gwf.htm">databas</a>
-]
+<li>[the parameters of a <a href="gwsetup?lang=%l;v=gwf.htm">database</a>]
 
-<li>[
-de: die Parameter des <a href="gwd?lang=%l;v=gwd.htm">gwd-Dienstes</a>
-en: the parameters of the <a href="gwd?lang=%l;v=gwd.htm">gwd service</a>
-es: los parámetros de un <a href="gwd?lang=%l;v=gwd.htm">servicio
-    gwd</a>
-fi: <a href="gwd?lang=%l;v=gwd.htm">gwd palvelun</a> parametrit
-fr: les paramètres du <a href="gwd?lang=%l;v=gwd.htm">service
-    gwd</a>
-it: i parametri del <a href="gwd?lang=%l;v=gwd.htm">service
-    gwd</a>
-lv: <a href="gwd?lang=%l;v=gwd.htm">gwd servisa</a> parametrus
-sv: parametrarna för <a href="gwd?lang=%l;v=gwd.htm">gwd servicen</a>
-]
+<li>[the parameters of the <a href="gwd?lang=%l;v=gwd.htm">gwd service</a>]
 
 </ul>
 
@@ -371,42 +116,12 @@ sv: parametrarna för <a href="gwd?lang=%l;v=gwd.htm">gwd servicen</a>
 
 <br />
 
-[
-de: … oder gehe zurück auf die <a
-    href="%l">Installations-Startseite</a>.
-en: … or go back to the <a href="%l">welcome page</a> of "gwsetup"
-es: … o regresar a la <a href="%l">página de recepción</a>
-    del "gwsetup"
-fi: … tai mene takaisin "gwsetup" -ohjelman <a href="%l">tervetuloa
-    sivulle</a>
-fr: … ou revenir à la <a href="%l">page d’accueil</a> de "gwsetup"
-it: … o tornare alla <a href="%l">pagina di benvenuto</a> di "gwsetup"
-lv: … vai atgriezties uz "gwsetup" <a href="%l">sâkumlapu</a>
-sv: … eller gå tillbaka till <a href="%l">välkomstsidan</a> för "gwsetup"
-]
+[… or go back to the <a href="%l">welcome page</a> of "gwsetup"]
 
 <br />
 
-[
-de: … oder schaue in die vollständige <b><font
-    color=#2f6400>GeneWeb</font></b>-<a
-    href="http://geneweb.tuxfamily.org/wiki/GeneWeb" target="_blank">Dokumentation</a>
-en: … or consult the complete <a
-    href="http://geneweb.tuxfamily.org/wiki/GeneWeb" target="_blank">documentation</a> of <font
-    color=#2f6400><b>GeneWeb</b></font>
-es: … o consultar la <a
-    href="http://geneweb.tuxfamily.org/wiki/GeneWeb" target="_blank">documentación</a> completa de
-    <font color=#2f6400><b>GeneWeb</b></font>
-fi: … tai konsultoi <b>GeneWeb</b> <a
-    href="http://geneweb.tuxfamily.org/wiki/GeneWeb" target="_blank">dokumentaatiota</a>
-fr: … ou consulter la <a
-    href="http://geneweb.tuxfamily.org/wiki/GeneWeb" target="_blank">documentation</a> complète de
-    <font color=#2f6400><b>GeneWeb</b></font>.
-it: … o consultare la <a
-    href="http://geneweb.tuxfamily.org/wiki/GeneWeb" target="_blank">documentazione</a> completa di
-    <font color=#2f6400><b>GeneWeb</b></font>.
-lv: … vai skatît <font color=#2f6400><b>GeneWeb</b></font> <a
-    href="http://geneweb.tuxfamily.org/wiki/GeneWeb" target="_blank">aprakstu</a>
-sv: … eller läs <a href="http://geneweb.tuxfamily.org/wiki/GeneWeb" target="_blank">dokumentationen</a> för
-    <font color=#2f6400><b>GeneWeb</b></font>
-]
+[… or consult the complete <a href="http://geneweb.tuxfamily.org/wiki/GeneWeb" target="_blank">documentation</a> of <font color=#2f6400><b>GeneWeb</b></font>]
+%(
+… or consult the complete <a href="http://geneweb.tuxfamily.org/wiki/GeneWeb" 
+target="_blank">documentation</a> of <font color=#2f6400><b>GeneWeb</b></font>
+%)
