--- a/bin/setup/lang/recover.htm
+++ b/bin/setup/lang/recover.htm
@@ -7,15 +7,7 @@
   <meta name="robots" content="none">
   <link rel="shortcut icon" href="images/favicon_gwsetup.png">
 
-  <title>[
-de: Eine bestehende Datenbank übernehmen - Phase 1
-en: Recover a database - Phase 1
-es: Recuperar una base - Fase 1
-fr: Récupérer une base - Phase 1
-it: Recuperare una base - Fase 1
-lv: Datu bâzes atjauninâðana - 1. fâze
-sv: Återskapa en databas - fas 1
-]
+  <title>[Recover a database - Phase 1]
 </title>
 %fsetup.css;
 </head>
@@ -24,15 +16,7 @@ sv: Återskapa en databas - fas 1
 
 <div style="background:url('images/gwlogo.png') no-repeat left top; text-align:center; height:95px; line-height:95px; color:#2f6400;">
 <h1 style="margin:0;">
-[
-de: Eine bestehende Datenbank übernehmen
-en: Recover a database
-es: Recuperar una base
-fr: Récupérer une base
-it: Recuperare una base
-lv: Atjauninât datu bâzi
-sv: Återskapa en databas
-]
+[Recover a database]
 </h1>
 </div>
 
@@ -41,27 +25,12 @@ sv: Återskapa en databas
 <form method=GET action="recover">
 <input type=hidden name=lang value="%l">
 
-[
-de: Gib den vollständigen Namen des <em>Verzeichnisses</em> an, in dem
-    deine alte <font color=#2f6400><b>GeneWeb</b></font>-Version installiert
-    ist.
-en: Select the name of the <em>directory</em> where your old version of
-    <font color=#2f6400><b>GeneWeb</b></font> is located (it must contain a
-    filen named <tt>gwu</tt> or <tt>gwu.exe</tt>).
-es: Indique Ud. el nombre completo de la <em>carpeta</em> en la cual se
-    encuetra su versión aneterior de <font
-    color=#2f6400><b>GeneWeb</b></font>.
-fr: Sélectionnez le <em>répertoire</em> où se trouve votre
-    ancienne version de <b><font color=#2f6400>GeneWeb</font></b> (il doit
-    contenir un fichier nommé <tt>gwu</tt> ou <tt>gwu.exe</tt>).
-it: Selezionate la <em>directoty</em> dove si trova la
-    vecchia versione di <b><font color=#2f6400>GeneWeb</font></b> (e che
-    deve contenere un file chiamato <tt>gwu</tt> o <tt>gwu.exe</tt>).
-lv: Uzrakstiet pilnu <em>kataloga</em> vârdu, kurâ atrodas vecâs <font
-    color=#2f6400><b>GeneWeb</b></font> versijas datu bâze.
-sv: Skriv in hela namnet för <em>katalogen</em> där din gamla version av
-    <font color=#2f6400><b>GeneWeb</b></font> ligger.
-]
+[Select the name of the <em>directory</em> where your old version of <font color=#2f6400><b>GeneWeb</b></font> is located (it must contain a filen named <tt>gwu</tt> or <tt>gwu.exe</tt>).]
+%(
+Select the name of the <em>directory</em> where your old version of <font color=
+#2f6400><b>GeneWeb</b></font> is located (it must contain a filen named <tt>gwu<
+/tt> or <tt>gwu.exe</tt>).
+%)
 
 <p>
 
@@ -69,27 +38,11 @@ sv: Skriv in hela namnet för <em>katalogen</em> där din gamla version av
 
 <p>
 
-[
-de: Dann drücke diesen Knopf:
-en: Then push this button:
-es: Apoye luego en este botón:
-fr: Puis appuyez sur ce bouton :
-it: Poi cliccate su questo bottone:
-lv: Tad nospiediet ðo podziòu:
-sv: Tryck sedan på knappen:
-]
+[Then push this button:]
 
 <p>
 
-<input type=submit value="[
-de: Suchen
-en: Search
-es: Buscar
-fr: Chercher
-it: Cercare
-lv: Meklçt
-sv: Sök
-]
+<input type=submit value="[Search]
 ">
 
 </form>
