--- a/bin/setup/lang/rename.htm
+++ b/bin/setup/lang/rename.htm
@@ -7,15 +7,7 @@
   <meta name="robots" content="none">
   <link rel="shortcut icon" href="images/favicon_gwsetup.png">
 
-  <title>[
-de: Datenbank umbenennen
-en: Renaming
-es: Cambio de nombre
-fr: Renommage
-it: Cambio di nome
-lv: Pârsaukðana
-sv: Döpa om
-]
+  <title>[Renaming]
 </title>
 %fsetup.css;
 </head>
@@ -24,30 +16,14 @@ sv: Döpa om
 
 <div style="background:url('images/gwlogo.png') no-repeat left top; text-align:center; height:95px; line-height:95px; color:#2f6400;">
 <h1 style="margin:0;">
-[
-de: Datenbank umbenennen
-en: Renaming
-es: Cambio de nombre
-fr: Renommage
-it: Cambio di nome
-lv: Pârsaukðana
-sv: Döpa om
-]
+[Renaming]
 </h1>
 </div>
 
 <form method=POST action="rename">
 <input type=hidden name=lang value="%l">
 <ul><li>
-[
-de: Ändere die Namen wie gewünscht:
-en: Change the names you want:
-es: Chambie el o los nombres que Ud. desee:
-fr: Changez le ou les noms que vous désirez :
-it: Cambiate il o i nomi che volete:
-lv: Izvçlieties nosaukumus, kurus Jûs vçlaties mainît:
-sv: Ändra de namn du vill:
-]
+[Change the names you want:]
 
 <p>
 
@@ -57,42 +33,17 @@ sv: Ändra de namn du vill:
 <td><a href="http://%m:%P/%a">%a</a></td>
 <td><input name="%a" value="%a" size=20></td>
 </tr>|
-<tr align=left><td>- [
-de: keine Datenbank vorhanden
-en: there is no database at present
-es: ninguna base de datos existe actualmente
-fr: il n’y a aucune base de données actuellement
-it: attualmente non esiste nessuna base di dati
-lv: nav nevienas datu bâzes
-sv: det finns ingen databas för tillfället
-]
+<tr align=left><td>- [there is no database at present]
 </tr></td>}
 </table>
 
 <p>
 <li>
-[
-de: Dann drücke diesen Knopf:
-en: Then push this button:
-es: Apoye luego en este botón
-fr: Puis appuyez sur ce bouton :
-it: Poi cliccate su questo bottone:
-lv: Beigâs nospiediet sekojoðo podziòu:
-sv: Tryck sedan på denna knapp:
-]
+[Then push this button:]
 
 <p>
 
-<input type=submit value="[
-[
-de: Umbenennen
-en: Rename
-es: Cambio de nombre
-fr: Renommer
-it: Cambio di nome
-lv: Pârsaukt
-sv: Döp om
-]
+<input type=submit value="[Rename]
 ">
 </ul>
 </form>
