--- a/bin/setup/lang/connex_ok.htm
+++ b/bin/setup/lang/connex_ok.htm
@@ -6,10 +6,7 @@
   <meta name="robots" content="none">
   <link rel="shortcut icon" href="images/favicon_gwsetup.png">
 
-  <title>[
-en: Connected components identified
-fr: Calcul des composantes connexes exécuté
-]
+  <title>[Connected components identified]
 </title>
 %fsetup.css;
 </head>
@@ -18,62 +15,34 @@ fr: Calcul des composantes connexes exécuté
 
 <div style="background:url('images/gwlogo.png') no-repeat left top; text-align:center; height:95px; line-height:95px; color:#2f6400;">
 <h1 style="margin:0;">
-[
-en: Connected components identified
-fr: Calcul des composantes connexes exécuté
-]
+[Connected components identified]
 </h1>
 </div>
 
-[
-en: You may observe results through two means:
-fr: Vous pouvez consulter les résultats de deux façons différentes :
-]
+[You may observe results through two means:]
 <ul>
 <li>
-[
-en: By looking at the terminal window if you have not asked for result redirection.
-fr: En regardant dans la fenêtre qui s'est ouverte si vous n'avez pas demandé de redirection des résultats.
-]
+[By looking at the terminal window if you have not asked for result redirection.]
 
 <li>
 %Io1;;{
-[
-en: Using <b>gwd</b> to <a href="http://%m:%P/%a?w=w;lang=%l;m=NOTES;f=connex">visualize the 
-    file</a> in the NOTES folder of your base where you have redirected output (%a.gwb/notes_d/connex.txt).<br>
-    This file contains the last set of data stored at this location (which is not necessarily the one you have just computed
-    - see the time stamp at the head of the file).<br>
-    This solution allows you to follow links to designated persons.
-fr: En utilisant <b>gwd</b> pour <a href="http://%m:%P/%a?w=w;lang=%l;m=NOTES;f=connex">visualiser
-    le fichier</a> dans le dossier NOTES où vous avez redirigé les résultats (%a.gwb/notes_d/connex.txt).<br>
-    Vous y verrez la dernière version du fichier connex.txt que vous avez créé à cet endroit
-    (qui n'est pas nécessairement celle que vous venez de calculer
-    - voir l'horodateur en tête de fichier).<br>
-    Cette solution vous permet de suivre les liens vers les personnes désignées.
-
-]
+[Using <b>gwd</b> to <a href="http://%m:%P/%a?w=w;lang=%l;m=NOTES;f=connex">visualize the  file</a> in the NOTES folder of your base where you have redirected output (%a.gwb/notes_d/connex.txt).<br> This file contains the last set of data stored at this location (which is not necessarily the one you have just computed - see the time stamp at the head of the file).<br> This solution allows you to follow links to designated persons.]
+%(
+Using <b>gwd</b> to <a href="http://%m:%P/%a?w=w;lang=%l;m=NOTES;f=connex">visua
+lize the  file</a> in the NOTES folder of your base where you have redirected ou
+tput (%a.gwb/notes_d/connex.txt).<br> This file contains the last set of data st
+ored at this location (which is not necessarily the one you have just computed -
+ see the time stamp at the head of the file).<br> This solution allows you to fo
+llow links to designated persons.
+%)
 |
-[
-en: Using <b>gwsetup</b> to <a href="gwsetup?lang=%l;o=%K;v=bso_log.htm">visualize the file</a> in which results were redirected ("%K").
-fr: En utilisant <b>gwsetup</b> pour <a href="gwsetup?lang=%l;o=%K;v=bso_log.htm">visualiser le fichier</a> vers lequel ont été envoyés les résultats ("%K").
-]
+[Using <b>gwsetup</b> to <a href="gwsetup?lang=%l;o=%K;v=bso_log.htm">visualize the file</a> in which results were redirected ("%K").]
+%(
+Using <b>gwsetup</b> to <a href="gwsetup?lang=%l;o=%K;v=bso_log.htm">visualize t
+he file</a> in which results were redirected ("%K").
+%)
 }
 </ul>
 
 <p />
-[
-de: Zurück zum <a href="gwsetup?lang=%l;v=welcome.htm">Hauptmenü</a>.
-en: Or you can return to the <a href="gwsetup?lang=%l;v=welcome.htm">main
-    menu</a>.
-es: Si no Ud. puede regresar al
-    <a href="gwsetup?lang=%l;v=welcome.htm">menú principal</a>.
-fi: Tai voit palata <a href="gwsetup?lang=%l;v=welcome.htm">päävalikkoon</a>.
-fr: Ou vous pouvez revenir au <a href="gwsetup?lang=%l;v=welcome.htm">menu
-    principal</a>.
-it: Potete tornare al <a href="gwsetup?lang=%l;v=welcome.htm">menu
-    principale</a>.
-lv: Vai Jûs varat atgriezties uz <a href="gwsetup?lang=%l;v=welcome.htm">galveno
-    izvçlni</a>.
-sv: Eller du kan återvända till
-    <a href="gwsetup?lang=%l;v=welcome.htm">huvudmenyn</a>.
-]
+[Or you can return to the <a href="gwsetup?lang=%l;v=welcome.htm">main menu</a>.]
