--- a/bin/setup/lang/consang.htm
+++ b/bin/setup/lang/consang.htm
@@ -7,16 +7,7 @@
   <meta name="robots" content="none">
   <link rel="shortcut icon" href="images/favicon_gwsetup.png">
 
-  <title>[
-de: Blutsverwandtschaften
-en: Consanguinities
-es: Consanguinidades
-fi: Verisukulaiset
-fr: Consanguinités
-it: Consanguineità
-lv: Consanguinities
-sv: Blodsband
-]
+  <title>[Consanguinities]
 </title>
 %fsetup.css;
 </head>
@@ -25,38 +16,15 @@ sv: Blodsband
 
 <div style="background:url('images/gwlogo.png') no-repeat left top; text-align:center; height:95px; line-height:95px; color:#2f6400;">
 <h1 style="margin:0;">
-[
-de: Blutsverwandtschaften
-en: Consanguinities
-es: Consanguinidades
-fi: Verisukulaiset
-fr: Initialisation des consanguinités
-it: Consanguineità
-lv: Consanguinities
-sv: Blodsband
-]
+[Consanguinities]
 </h1>
 </div>
 
-[
-de: Die Initialisierung der Blutsverwandtschaften ist notwendig, damit
-    sie beim Abrufen der Datenbank angezeigt werden können.
-en: The initialization of consanguinities is necessary so that the
-    consanguinities are displayed when browsing the database.
-es: La inicialización de las consanguinidades es necesaria para 
-    que estas sean visibles cuando uno explora la base.
-fi: Verisukulaisten käyttöönotto on tarpelliista jotta tietokantaa
-    selatessa ne voidaan näyttää.
-fr: L’initialisation des consanguinités est nécessaire pour
-    que les consanguinités s’affichent quand on navigue dans la
-    base.
-it: L'inizializzazione delle consanuineità è necessaria per
-    renderle visibili al momento di percorrere la base.
-lv: The initialization of consanguinities is necessary so that the
-    consanguinities are displayed when browsing the database.
-sv: Beräkningen av blodsbanden är nödvändig för att
-    blodsbanden ska visas i databasen.
-]
+[The initialization of consanguinities is necessary so that the consanguinities are displayed when browsing the database.]
+%(
+The initialization of consanguinities is necessary so that the consanguinities a
+re displayed when browsing the database.
+%)
 
 <p />
 
@@ -65,17 +33,7 @@ sv: Beräkningen av blodsbanden är nödvändig för att
 <input type="hidden" name="lang" value="%l" />
 <input type="hidden" name="q" value="on" />
 <ul><li>
-[
-de: Wähle deine Datenbank mit dem zugehörigen Schalter.
-en: Select your database by clicking on the associated button.
-es: Seleccione su base de datos cliqueando en el botón asociado.
-fi: Valitse tietokantasi painamalla nappia alla.
-fr: Sélectionnez votre base de données en cliquant sur le
-    bouton associé.
-it: Selezionate la vostra bese di dati cliccando sul bottone associato.
-lv: Select your database by clicking on the associated button.
-sv: Välj din databas genom att klicka på motsvarande knapp.
-]
+[Select your database by clicking on the associated button.]
 
 <p />
 
@@ -87,75 +45,30 @@ sv: Välj din databas genom att klicka på motsvarande knapp.
 <td><a href="http://%m:%P/%a">%a</a></td>
 </tr>|
 <tr align="left">
-<td>- [
-de: keine Datenbank vorhanden
-en: there is no database at present
-es: no existe ninguna base de datos actualmente
-fi: ei tietokantaa saatavilla
-fr: il n’y a aucune base de données actuellement
-it: attualmente non esiste nessuna base di dati
-lv: there is no database at present
-sv: det finns ingen databas för tillfället
-]
+<td>- [there is no database at present]
 </tr></td>}
 </table>
 
 <p />
 <li>
-[
-de: Falls gewünscht, wähle die folgende Option:
-en: Select the option if you want:
-es: Seleccione eventualmente la opción propuesta:
-fi: Valitse asetus jos haluat:
-fr: Sélectionnez éventuellement l’option proposée :
-it: Selezionate eventualmente l'opzione proposta:
-lv: Select the option if you want:
-sv: Välj option om du vill:
-]
+[Select the option if you want:]
 
 <p />
 
 <table class="setup">
 <tr align="left">
 <td><input type="checkbox" name="scratch" value="on" />   </td>
-<td>[
-de: Komplett neu berechnen.
-en: Restart the computing from scratch.
-es: Recomenzar el cálculo de toda la base.
-fi: Aloita laskenta alusta.
-fr: Recommencer le calcul sur toute la base.
-it: Ricominciare il calcolo su tutta la base.
-lv: Restart the computing from scratch.
-sv: Starta beräkning från början.
-]
+<td>[Restart the computing from scratch.]
 </td></tr>
 </table>
 
 <p />
 <li>
-[
-de: Dann drücke diesen Knopf:
-en: Then press this button:
-es: Luego apoye en este botón:
-fi: Sitten paina tätä nappia:
-fr: Puis appuyez sur ce bouton :
-it: E poi cliccate su questo bottone:
-lv: Then press this button:
-sv: Tryck sedan på denna knapp:
-]
+[Then press this button:]
 
 <p />
 
-<input type="submit" value="[
-de: Initialisieren
-en: Consang
-es: Consanguinidades
-fi: Verisukulaisuuden laskelma
-fr: Consang
-it: Consang
-lv: Consang
-sv: Beräkna blodsband
-]
+<input type="submit" value="[Consang]
 " />
 </ul>
 </form>
