--- a/bin/setup/lang/gwc.htm
+++ b/bin/setup/lang/gwc.htm
@@ -7,15 +7,7 @@
   <meta name="robots" content="none">
   <link rel="shortcut icon" href="images/favicon_gwsetup.png">
 
-  <title>[
-de: GeneWeb-Quelldatei importieren
-en: Import a GeneWeb file
-es: Importación d'un fichero GeneWeb
-fr: Importation d’un fichier GeneWeb
-it: Importazione di un file GeneWeb
-lv: GeneWeb resursdatnes imports
-sv: Importera en GeneWeb källfil
-]
+  <title>[Import a GeneWeb file]
 </title>
 %fsetup.css;
 </head>
@@ -24,15 +16,7 @@ sv: Importera en GeneWeb källfil
 
 <div style="background:url('images/gwlogo.png') no-repeat left top; text-align:center; height:95px; line-height:95px; color:#2f6400;">
 <h1 style="margin:0;">
-[
-de: GeneWeb-Quelldatei importieren
-en: Import of a GeneWeb file
-es: Importación d'un fichero GeneWeb
-fr: Importation d’un fichier GeneWeb
-it: Importazione di un file GeneWeb
-lv: GeneWeb resursdatnes imports
-sv: Importera en GeneWeb källfil
-]
+[Import of a GeneWeb file]
 </h1>
 </div>
 <p />
@@ -41,39 +25,22 @@ sv: Importera en GeneWeb källfil
 <input type=hidden name=lang value=%l>
 
 <ul><li>
-[
-de: Bitte gib folgende Daten ein kompletter Name deiner <font
-    color=#2f6400><b>GeneWeb</b></font>-Quelldatei (inklusive Endung ".gw");
-en: Select the name of your GeneWeb source file (ending with ".gw");
-es: Entre Ud el nombre completo de su fichero fuente GeneWeb (que
-    termina en ".gw").
-fr: Sélectionnnez votre fichier source <b><font
-    color=#2f6400>GeneWeb</font></b> (se terminant par ".gw"):
-it: Selezionate il vostro file sorgente <b><font
-    color=#2f6400>GeneWeb</font></b> (che finisce con ".gw"):
-lv: Ierakstiet pilnu GeneWeb resursdatnes nosaukumu (kas beidzas ar ".gw").
-sv: Skriv in det kompletta namnet för din <font
-    color=#2f6400><b>GeneWeb</b></font> källfil (den måste sluta med ".gw"):
-]
+[Select the name of your GeneWeb source file (ending with ".gw");]
 <p>
 <table class="setup">
 <tr align=left><td>
-<ul><li>[
-en: Select the source file or navigate in your foldres.
-fr: Sélectionnez le nom du fichier source, ou naviguez dans vos dossiers.
-]
+<ul><li>[Select the source file or navigate in your foldres.]
 
 %j
 </ul>
 </td></tr>
 <tr align=left><td>
-<ul><li>[
-en: or provide directly the name of the GeneWeb source file(s) relative to the path above.<br>
-    If this parameter contains the '*' character, you must provide a unique name for created database.
-fr: ou donnez directement le nom du ou des fichiers source GeneWeb en complément du chemin ci-dessus.<br>
-    Si ce paramètre contient le caractère '*', il sera impératif de fournir un
-    nom unique pour la base qui sera créée.
-]
+<ul><li>[or provide directly the name of the GeneWeb source file(s) relative to the path above.<br> If this parameter contains the '*' character, you must provide a unique name for created database.]
+%(
+or provide directly the name of the GeneWeb source file(s) relative to the path 
+above.<br> If this parameter contains the '*' character, you must provide a uniq
+ue name for created database.
+%)
 </ul>
 </td></tr>
 <p>
@@ -83,93 +50,39 @@ fr: ou donnez directement le nom du ou des fichiers source GeneWeb en complémen
 </table>
 <span style="font-size:80%%">
 <table>
-<tr><td valign="top">[
-en: Note:
-fr: Note :
-]
+<tr><td valign="top">[Note:]
 </td>
-<td>[
-en: ../ allows you to reach the parent directory.<br>
-    In the Windows world, this will be
-    insufficient to change the drive letter (C: -> D:), but you can do this directly
-    in the url in your navigator.
-fr: ../ vous permet de naviguer vers le dossier parent.<br>
-    Dans le monde Windows, ceci ne
-    vous permettra pas de changer la lettre du disque (C: -> D:), mais vous pouvez faire
-    ce changement directement dans l'url dans le navigateur.
-]
+<td>[../ allows you to reach the parent directory.<br> In the Windows world, this will be insufficient to change the drive letter (C: -> D:), but you can do this directly in the url in your navigator.]
+%(
+../ allows you to reach the parent directory.<br> In the Windows world, this wil
+l be insufficient to change the drive letter (C: -> D:), but you can do this dir
+ectly in the url in your navigator.
+%)
 </td></tr>
 </table>
 </span>
 <p>
 <li>
-[
-de: Den Namen, den du deiner <font
-    color=#2f6400><b>GeneWeb</b></font>-Datenbank geben möchtest.
-en: Enter the name you want to give to your <font
-    color=#2f6400><b>GeneWeb</b></font> database.
-es: El nombre que Ud. desea dar a su base de datos <font
-    color=#2f6400><b>GeneWeb</b></font>.
-fr: Entrez le nom que vous voulez donner à votre base de
-    données <b><font color=#2f6400>GeneWeb</font></b>.
-it: Digitate il nome che volete dare alla vostra base di dati
-   <b><font color=#2f6400>GeneWeb</font></b>.
-lv: Ierakstiet nosaukumu, kâdâ Jûs  vçlaties nosaukt savu <font
-    color=#2f6400><b>GeneWeb</b></font> datu bâzi.
-sv: Namnet du vill kalla din <font color=#2f6400><b>GeneWeb</b></font>
-    databas.
-]
+[Enter the name you want to give to your <font color=#2f6400><b>GeneWeb</b></font> database.]
+%(
+Enter the name you want to give to your <font color=#2f6400><b>GeneWeb</b></font
+> database.
+%)
 <p>
 <table class="setup">
 <tr align=left><td>
 <input name=o size=30>
-[
-de: Wenn du nichts eingibst, wird der Name aus deiner <font
-    color=#2f6400><b>GeneWeb</b></font>-Quelldatei abgeleitet.
-en: If you write nothing, it
-    will be deducted from the GeneWeb source file.
-es: Si Ud. no escribe nada, el nombre
-    se deducirá a partir del nombre del fichero fuente GeneWeb.
-fr: Si vous ne
-    mettez rien, il sera déduit du nom du fichier source GeneWeb.
-it: Se non mettete niente
-    il nome verrà dedotto da quello del file sorgente GeneWeb.
-lv: Ja nekas netiks ierakstîts, datu bâzes nosaukums tiks izveidots
-    no GeneWeb resursdatnes nosaukuma.
-sv: Om du inte skriver någonting, kommer namnet att bli härlätt
-    från <font color=#2f6400><b>GeneWeb</b></font> källfilens namn.
-]
+[If you write nothing, it will be deducted from the GeneWeb source file.]
 </td></tr>
 </table>
 <p>
 <li>
-[
-de: Wähle die gewünschten Optionen:
-en: Select the options you want:
-es: Seleccione las opciones que Ud. desee:
-fr: Sélectionnez les options que vous désirez :
-it: Selezionate le opzioni desiderate:
-lv: Izvçlieties atbilstoðos parametrus:
-sv: Välj de optioner du vill ha:
-]
+[Select the options you want:]
 <p>
 <table class="setup">
 <tr align=left>
 <td><input type=checkbox name=stats value="on">   </td>
-<td>[
-de: Statistiken nach Abschluß der
-    Operation ausgeben (sind dann in der Trace-Ausgabe sichtbar).
-en: Display some statistics at the end (they will be visible in the traces).
-es: Mostrar algunas estadísticas
-    al final (ellas seran visibles en las trazas).
-fr: Afficher quelques statistiques
-    à la fin (elles seront visibles dans les traces).
-it: Visualizzare alcune statistiche
-    alla fine (saranno visibili nelle tracce).
-lv: Beigâs parâdît darbîbas statistiku
-    (tâ bûs redzama programas darbîbâs pçdâs).
-sv: Visa statistik på slutet (den kommer att synas i utskriften).
-]
+<td>[Display some statistics at the end (they will be visible in the traces).]
 </td>
 </tr>
 </table>
@@ -177,30 +90,14 @@ sv: Visa statistik på slutet (den kommer att synas i utskriften).
 <table class="setup">
 <tr align=left>
 <td><input type=checkbox name=nc value="on">   </td>
-<td>[
-de: Datenkonsistenz nicht überprüfen.
-en: Do not check the consistency of the data.
-es: No verificar la coherencia de los datos.
-fr: Ne pas vérifier la cohérence des données.
-it: Non verificare la coerenza dei dati.
-lv: Nepârbaudît datu saskanîbu.
-sv: Kontrollera inte att databasens data är OK.
-]
+<td>[Do not check the consistency of the data.]
 </td></tr>
 </table>
 <p>
 <table class="setup">
 <tr align=left>
 <td><input type=checkbox name=cg value="on">   </td>
-<td>[
-de: Initialisierung der Blutsverwandtschaften auch durchführen.
-en: End by the initialization of consanguinities.
-es: Terminar por el cálculo previo de consanguinidad.
-fr: Terminer par le précalcul de consanguinité.
-it: Terminare con il pre-calcolo di consanguineità.
-lv: Nobeigt ar asinsradniecîbas pârrçíinu.
-sv: Avsluta med att beräkna blodsbanden.
-]
+<td>[End by the initialization of consanguinities.]
 </td>
 </tr>
 </table>
@@ -208,25 +105,14 @@ sv: Avsluta med att beräkna blodsbanden.
 <table class="setup">
 <tr align=left>
 <td><input type=checkbox name=f value="on">   </td>
-<td>[
-en: Delete database if already existing.
-fr: Détruire la base pré-existante.
-]
+<td>[Delete database if already existing.]
 </td>
 </tr>
 </table>
 
 <p>
 <li>
-[
-de: Dann drücke "Ok".
-en: Then click on "Ok".
-es: Finalmente cliquear en "Ok".
-fr: Puis cliquez sur "Ok".
-it: Poi cliccate su "Ok".
-lv: Tad nospiediet "Ok".
-sv: Klicka sedan på "OK".
-]
+[Then click on "Ok".]
 </li>
 <p>
 <input type=submit value="Ok">
