--- a/bin/setup/lang/gwfix.htm
+++ b/bin/setup/lang/gwfix.htm
@@ -7,10 +7,7 @@
   <meta name="robots" content="none">
   <link rel="shortcut icon" href="images/favicon_gwsetup.png">
 
-  <title>[
-en: Fix base and recompute index
-fr: Corrige une base et reclacule l'index
-]
+  <title>[Fix base and recompute index]
 </title>
 %fsetup.css;
 </head>
@@ -19,10 +16,7 @@ fr: Corrige une base et reclacule l'index
 
 <div style="background:url('images/gwlogo.png') no-repeat left top; text-align:center; height:95px; line-height:95px; color:#2f6400;">
 <h1 style="margin:0;">
-[
-en: Fix base and recompute index
-fr: Corrige une base et reclacule l'index
-]
+[Fix base and recompute index]
 </h1>
 </div>
 
@@ -34,54 +28,29 @@ fr: Corrige une base et reclacule l'index
 <tr>
 <td>
 <ul><li>
-[
-en: Select your base:
-fr: Sélectionnez la base de données :
-]
+[Select your base:]
 
 <p>
 <table class="setup">
 %b{<tr align=left>
 <td><input type="radio" name="anon" value="%a">   </td>
 <td>%a</td></tr>|
-<tr align=left><td>- [
-de: keine Datenbank vorhanden
-en: there is no database at present
-es: actualmente ninguna base de datos existe
-fr: il n’y a aucune base de données actuellement
-it: attualmente non esiste nessuna base di dati
-lv: nav nevienas datu bâzes
-sv: det finns ingen databas för tillfället
-]
+<tr align=left><td>- [there is no database at present]
 </tr></td>}
 </table>
 <p>
 
 <p>
 <li>
-[
-de: Wähle die gewünschten Optionen:
-en: Select the options you want:
-es: Seleccione las opciones que Ud. desee:
-fr: Sélectionnez les options que vous désirez :
-it: Selezionate le opzioni desiderate:
-lv: Izvçlieties atbilstoðos parametrus:
-sv: Välj de optioner du vill ha:
-]
+[Select the options you want:]
 <br>
-[
-en: (no selection is equivalent to select all).
-fr: (aucune option est équivalent à les sélectionner toutes). 
-]
+[(no selection is equivalent to select all).]
 
 <p>
 <table class="setup">
 <tr align=left>
 <td><input type="checkbox" name="dry-run" value="on">   </td>
-<td>[
-en: do not commit changes (only traces).
-fr: ne pas effectuer les changements (traces seules).
-]
+<td>[do not commit changes (only traces).]
 </td>
 </tr>
 </table>
@@ -89,10 +58,7 @@ fr: ne pas effectuer les changements (traces seules).
 <table class="setup">
 <tr align="left">
 <td><input type="checkbox" name="q" value="on">   </td>
-<td>[
-en: quiet mode.
-fr: peu de traces.
-]
+<td>[quiet mode.]
 </td>
 </tr>
 </table>
@@ -100,10 +66,7 @@ fr: peu de traces.
 <table class="setup">
 <tr align="left">
 <td><input type="checkbox" name="qq" value="on">   </td>
-<td>[
-en: very quiet mode.
-fr: pas de traces du tout.
-]
+<td>[very quiet mode.]
 </td>
 </tr>
 </table>
@@ -111,10 +74,7 @@ fr: pas de traces du tout.
 <table class="setup">
 <tr align="left">
 <td><input type="checkbox" name="fast" value="on">   </td>
-<td>[
-en: fast mode. Needs more memory
-fr: mode rapide. Nécessite plus de mémoire.
-]
+<td>[fast mode. Needs more memory]
 </td>
 </tr>
 </table>
@@ -122,10 +82,7 @@ fr: mode rapide. Nécessite plus de mémoire.
 <table class="setup">
 <tr align="left">
 <td><input type="checkbox" name="families-parents" value="on">   </td>
-<td>[
-en: families' parents.
-fr: families' parents.
-]
+<td>[families' parents.]
 </td>
 </tr>
 </table>
@@ -133,10 +90,7 @@ fr: families' parents.
 <table class="setup">
 <tr align="left">
 <td><input type="checkbox" name="families-children" value="on">   </td>
-<td>[
-en: families' children.
-fr: families' children.
-]
+<td>[families' children.]
 </td>
 </tr>
 </table>
@@ -144,10 +98,7 @@ fr: families' children.
 <table class="setup">
 <tr align="left">
 <td><input type="checkbox" name="persons-NBDS" value="on">   </td>
-<td>[
-en: persons' NBDS.
-fr: persons' NBDS.
-]
+<td>[persons' NBDS.]
 </td>
 </tr>
 </table>
@@ -155,10 +106,7 @@ fr: persons' NBDS.
 <table class="setup">
 <tr align="left">
 <td><input type="checkbox" name="persons-parents" value="on">   </td>
-<td>[
-en: persons' parents.
-fr: persons' parents.
-]
+<td>[persons' parents.]
 </td>
 </tr>
 </table>
@@ -166,10 +114,7 @@ fr: persons' parents.
 <table class="setup">
 <tr align="left">
 <td><input type="checkbox" name="persons-families" value="on">   </td>
-<td>[
-en: persons' families.
-fr: persons' families.
-]
+<td>[persons' families.]
 </td>
 </tr>
 </table>
@@ -177,10 +122,7 @@ fr: persons' families.
 <table class="setup">
 <tr align="left">
 <td><input type="checkbox" name="pevents-witnesses" value="on">   </td>
-<td>[
-en: pevents' witnesses.
-fr: pevents' witnesses.
-]
+<td>[pevents' witnesses.]
 </td>
 </tr>
 </table>
@@ -188,10 +130,7 @@ fr: pevents' witnesses.
 <table class="setup">
 <tr align="left">
 <td><input type="checkbox" name="fevents-witnesses" value=on>   </td>
-<td>[
-en: fevents' witnesses.
-fr: fevents' witnesses.
-]
+<td>[fevents' witnesses.]
 </td>
 </tr>
 </table>
@@ -199,10 +138,7 @@ fr: fevents' witnesses.
 <table class="setup">
 <tr align="left">
 <td><input type="checkbox" name="marriage-divorce" value="on">   </td>
-<td>[
-en: marriage divorce.
-fr: marriage divorce.
-]
+<td>[marriage divorce.]
 </td>
 </tr>
 </table>
@@ -210,10 +146,7 @@ fr: marriage divorce.
 <table class="setup">
 <tr align="left">
 <td><input type="checkbox" name="index" value="on">   </td>
-<td>[
-en: index. Automatically enabled by any other option
-fr: index. Activé automatiquement par les autres options
-]
+<td>[index. Automatically enabled by any other option]
 </td>
 </tr>
 </table>
@@ -221,32 +154,17 @@ fr: index. Activé automatiquement par les autres options
 <table class="setup">
 <tr align="left">
 <td><input type="checkbox" name="help" value="on">   </td>
-<td>[
-en: help.
-fr: help.
-]
+<td>[help.]
 </td>
 </tr>
 </table>
 <p>
 
 <li>
-[
-de: Dann drücke diesen Knopf:
-en: Then push this button:
-es: Apoye luego en este botón:
-fr: Puis appuyez sur ce bouton :
-it: Poi cliccate su questo bottone:
-lv: Beigâs nospiediet ðo podziòu:
-sv: Tryck sedan på denna knapp:
-]
+[Then push this button:]
 
 <p>
-<input type="submit" value="[
-[
-en: Fix base
-fr: Fix base
-]
+<input type="submit" value="[Fix base]
 ">
 </ul>
 </form>
