--- a/bin/setup/lang/ren_ok.htm
+++ b/bin/setup/lang/ren_ok.htm
@@ -7,15 +7,7 @@
   <meta name="robots" content="none">
   <link rel="shortcut icon" href="images/favicon_gwsetup.png">
 
-  <title>[
-de: Operation durchgeführt
-en: Operation completed
-es: Operación terminada
-fr: Opération terminée
-it: Operazione terminata
-lv: Darîts
-sv: Operationen klar
-]
+  <title>[Operation completed]
 </title>
 %fsetup.css;
 </head>
@@ -24,63 +16,24 @@ sv: Operationen klar
 
 <div style="background:url('images/gwlogo.png') no-repeat left top; text-align:center; height:95px; line-height:95px; color:#2f6400;">
 <h1 style="margin:0;">
-[
-de: Operation durchgeführt
-en: Operation completed
-es: Operación terminada
-fr: Opération terminée
-it: Operazione terminata
-lv: Darîts
-sv: Operationen klar
-]
+[Operation completed]
 </h1>
 </div>
 
 <br><p>
 
-[
-de: Deine Datenbank wurde umbenannt. Hier ist die neue Übersicht:
-en: Your databases have been renamed. Here is the new list:
-es: Sus bases de datos han cambiado de nombre.
-    He aquí la nueva lista:
-fr: Vos bases de données ont été renommées.
-    Voici la nouvelle liste:
-it: Le vostre basi di dati hanno cambiato nome.
-    Ecco la nuova lista:
-lv: Jûsu datu bâzes ir pârsauktas. Ðeit ir jaunais datu bâzu saraksts:
-sv: Dina databaser har blivit omdöpta. Här är den nya listan:
-]
+[Your databases have been renamed. Here is the new list:]
 
 <p>
 
 <ul>
 
 %b{<li><a href="http://%m:%P/%a">%a</a>|
-<li>[
-de: keine Datenbank vorhanden
-en: there is no database at present
-es: actualmente no hay ninguna base de datos 
-fr: il n’y a aucune base de données actuellement
-it: attualmente non esiste nessuna base di dati
-lv: nav nevienas datu bâzes
-sv: det finns ingen databas för tillfället
-]
+<li>[there is no database at present]
 }
 
 </ul>
 
 <p>
 
-[
-de: Zurück zum <a href="gwsetup?lang=%l;v=welcome.htm">Hauptmenü</a>.
-en: You can return to the <a href="gwsetup?lang=%l;v=welcome.htm">main menu</a>.
-es: Ud. puede regresar al <a href="gwsetup?lang=%l;v=welcome.htm">menú
-    principal</a>.
-fr: Vous pouvez revenir au <a href="gwsetup?lang=%l;v=welcome.htm">menu
-    principal</a>.
-it: Potete tornare al <a href="gwsetup?lang=%l;v=welcome.htm">menu
-    principale</a>.
-lv: Jûs variet atgriezties <a href="gwsetup?lang=%l;v=welcome.htm">galvenajâ
-    izvçlnç</a>.
-sv: Du kan återvända till <a href="gwsetup?lang=%l;v=welcome.htm">huvudmenyn</a>.
-]
+[You can return to the <a href="gwsetup?lang=%l;v=welcome.htm">main menu</a>.]
