--- a/bin/setup/lang/simple.htm
+++ b/bin/setup/lang/simple.htm
@@ -7,16 +7,7 @@
   <meta name="robots" content="none">
   <link rel="shortcut icon" href="images/favicon_gwsetup.png">
 
-  <title>[
-de: Einfache Methode
-en: Simple method
-es: Método simple
-fi: Yksinkertainen tapa
-fr: Méthode simple
-it: Metodo semplice
-lv: Vienkârðâ metode
-sv: Enkel metod
-]
+  <title>[Simple method]
 </title>
 %fsetup.css;
 </head>
@@ -25,16 +16,7 @@ sv: Enkel metod
 
 <div style="background:url('images/gwlogo.png') no-repeat left top; text-align:center; height:95px; line-height:95px; color:#2f6400;">
 <h1 style="margin:0;">
-[
-de: Einfache Methode
-en: Simple method
-es: Método simple
-fi: Yksinkertainen tapa
-fr: Méthode simple
-it: Metodo semplice
-lv: Vienkârðâ metode
-sv: Enkel metod
-]
+[Simple method]
 </h1>
 </div>
 
@@ -42,42 +24,14 @@ sv: Enkel metod
 <input type="hidden" name="lang" value="%l">
 <p>
 <ul><li>
-[
-de: Gib den Namen ein, den deine Datenbank tragen soll:
-en: Write the name you want for your database :
-es: Escriba aquí el nombre que Ud. desea dar a su base de datos:
-fi: Anna tietokannan nimi :
-fr: Indiquez le nom que vous voulez donner à votre base de
-    données :
-it: Indicate qui il nome che volete attribuire alla vostra base di dati:
-lv: Ierakstiet datu bâzes nosaukumu, kâdâ Jûs vçlaties lai tas bûtu:
-sv: Skriv in namnet du vill kalla din databas:
-]
+[Write the name you want for your database :]
 <p>
 <input name="o" size="30" value="base">
 <p>
 <li>
-[
-de: Dann drücke diesen Knopf:
-en: Then push this button:
-es: Apoye luego en este botón:
-fi: Sitten paina tätä nappia:
-fr: Puis appuyez sur ce bouton :
-it: Poi cliccate su questo bottone:
-lv: Tad nospiediet ðo podziòu:
-sv: Tryck sedan på knappen:
-]
+[Then push this button:]
 <p>
-<input type="submit" value="[
-de: Anlegen
-en: Create
-es: Crear
-fi: Luo
-fr: Créer
-it: Creare
-lv: Izviedot
-sv: Skapa
-]
+<input type="submit" value="[Create]
 ">
 </ul>
 </form>
