--- a/bin/setup/lang/update_nldb_ok.htm
+++ b/bin/setup/lang/update_nldb_ok.htm
@@ -7,16 +7,7 @@
   <meta name="robots" content="none">
   <link rel="shortcut icon" href="images/favicon_gwsetup.png">
 
-  <title>[
-de: Operation durchgeführt
-en: Operation completed
-es: Operación terminada
-fi: Toiminto valmis
-fr: Opération terminée
-it: Operazione terminata
-lv: Darbîba pabeigta
-sv: Operationen klar
-]
+  <title>[Operation completed]
 </title>
 %fsetup.css;
 </head>
@@ -25,44 +16,15 @@ sv: Operationen klar
 
 <div style="background:url('images/gwlogo.png') no-repeat left top; text-align:center; height:95px; line-height:95px; color:#2f6400;">
 <h1 style="margin:0;">
-[
-de: Operation durchgeführt
-en: Operation completed
-es: Operación terminada
-fi: Toiminto valmis
-fr: Opération terminée
-it: Operazione terminata
-lv: Darbîba pabeigta
-sv: Operationen klar
-]
+[Operation completed]
 </h1>
 </div>
 
-[
-de: So. Die Operation "%d" auf der Datenbank "%a" ist beendet.
-en: So. The operation "%d" on the database "%a" is terminated.
-es: Hela aquí. La operación "%d" sobre la base "%a" ha 
-    terminado.
-fi: Toiminto "%d" tietokannassa "%a" on lopetettu.
-fr: Voilà. L’opération "%d" sur la base "%a" est
-    terminée.
-it: L'operazione "%d" sulla base "%a" é terminata.
-lv: Kârtîbâ. Darbîba "%d" ar datu bâzi "%a" pabeigta.
-sv: Operationen "%d" på databasen "%a" är avslutad.
-]
+[So. The operation "%d" on the database "%a" is terminated.]
 
 <p />
 
-[
-de: Du kannst nun mit deiner Datenbank arbeiten…
-en: You can consult it:
-es: Ud puede consultarla:
-fi: Voit lukea sitä osoitteessa:
-fr: Vous pouvez la consulter :
-it: Ora potete consultarla
-lv: Jûs variet ar to darboties:
-sv: Du kan konsultera den:
-]
+[You can consult it:]
 
 <p />
 
@@ -70,15 +32,4 @@ sv: Du kan konsultera den:
 
 <p /><br />
 
-… [
-de: oder zurück zum
-    <a href="gwsetup?lang=%l;v=welcome.htm">Hauptmenü</a> springen.
-en: or return to the <a href="gwsetup?lang=%l;v=welcome.htm">main menu</a>.
-es: o regresar al <a href="gwsetup?lang=%l;v=welcome.htm">menú
-    principal</a>.
-fi: tai palaa <a href="gwsetup?lang=%l;v=welcome.htm">päävalikkoon</a>.
-fr: ou revenir au <a href="gwsetup?lang=%l;v=welcome.htm">menu principal</a>.
-it: o tornare al <a href="gwsetup?lang=%l;v=welcome.htm">menu principale</a>.
-lv: atgriezties <a href="gwsetup?lang=%l;v=welcome.htm">galvenajâ izvçlnç</a>.
-sv: eller återvända till <a href="gwsetup?lang=%l;v=welcome.htm">huvudmenyn</a>.
-]
+… [or return to the <a href="gwsetup?lang=%l;v=welcome.htm">main menu</a>.]
